default FixCommandSupport and cleanup

--- a/tests/test_cases/2018/commands/7B3.7BB.220100|fc=1.yaml
+++ b/tests/test_cases/2018/commands/7B3.7BB.220100|fc=1.yaml
@@ -1,495 +1,437 @@
 command_id: 7B3.7BB.220100|fc=1
 test_cases:
 - expected_values:
-    KIA_HVAC_AAT: 13
-    KIA_HVAC_EVAPORATOR_T: 2
-    KIA_HVAC_HUMIDITY_SENSOR_FOR_AUTOMATIC_DEFOGGER: 57
-    KIA_HVAC_IAT: 15.5
-    KIA_HVAC_IAT_DRIVER_LEGS_VENT: 87.5
-    KIA_HVAC_IAT_DRIVER_VENT: 87.5
-    KIA_TEMP_EXT: 13
-    KIA_TEMP_INT: 15.5
-    KIA_VSS: 23
-  response: |-
-    7BB10256201007F901E
+    STINGER_TEMP_INT: 15.5
+    STINGER_TEMP_EXT: 13
+    STINGER_VSS: 23
+  response: '7BB10256201007F901E
+
     7BB2168FF6F6A5400EF
+
     7BB22EF00F0FFFF0DFF
+
     7BB23FFFFFFFFFFFF0F
+
     7BB2410392DFFFF1780
-    7BB25FF01FF00000000
+
+    7BB25FF01FF00000000'
 - expected_values:
-    KIA_HVAC_AAT: 12.5
-    KIA_HVAC_EVAPORATOR_T: 2
-    KIA_HVAC_HUMIDITY_SENSOR_FOR_AUTOMATIC_DEFOGGER: 51
-    KIA_HVAC_IAT: 16
-    KIA_HVAC_IAT_DRIVER_LEGS_VENT: 87.5
-    KIA_HVAC_IAT_DRIVER_VENT: 87.5
-    KIA_TEMP_EXT: 12.5
-    KIA_TEMP_INT: 16
-    KIA_VSS: 58
-  response: |-
-    7BB10256201007F901E
+    STINGER_TEMP_INT: 16
+    STINGER_TEMP_EXT: 12.5
+    STINGER_VSS: 58
+  response: '7BB10256201007F901E
+
     7BB2168FF70695400EF
+
     7BB22EF01F0FFFF0DFF
+
     7BB23FFFFFFFFFFFF0F
+
     7BB2410332DFFFF3A82
-    7BB25FF01FF00000000
+
+    7BB25FF01FF00000000'
 - expected_values:
-    KIA_HVAC_AAT: 15.5
-    KIA_HVAC_EVAPORATOR_T: 14.5
-    KIA_HVAC_HUMIDITY_SENSOR_FOR_AUTOMATIC_DEFOGGER: 35
-    KIA_HVAC_IAT: 16.5
-    KIA_HVAC_IAT_DRIVER_LEGS_VENT: 87.5
-    KIA_HVAC_IAT_DRIVER_VENT: 87.5
-    KIA_TEMP_EXT: 15.5
-    KIA_TEMP_INT: 16.5
-    KIA_VSS: 26
-  response: |-
-    7BB10256201007F901E
+    STINGER_TEMP_INT: 16.5
+    STINGER_TEMP_EXT: 15.5
+    STINGER_VSS: 26
+  response: '7BB10256201007F901E
+
     7BB2168FF716F6D0A41
+
     7BB22EF0A41FFFF0EFF
+
     7BB23FFFFFFFFFFFF0F
+
     7BB24EE232DFFFF1A74
-    7BB25FF00FF00000000
+
+    7BB25FF00FF00000000'
 - expected_values:
-    KIA_HVAC_AAT: 15.5
-    KIA_HVAC_EVAPORATOR_T: 14.5
-    KIA_HVAC_HUMIDITY_SENSOR_FOR_AUTOMATIC_DEFOGGER: 31
-    KIA_HVAC_IAT: 16.5
-    KIA_HVAC_IAT_DRIVER_LEGS_VENT: 87.5
-    KIA_HVAC_IAT_DRIVER_VENT: 87.5
-    KIA_TEMP_EXT: 15.5
-    KIA_TEMP_INT: 16.5
-    KIA_VSS: 0
-  response: |-
-    7BB10256201007F901E
+    STINGER_TEMP_INT: 16.5
+    STINGER_TEMP_EXT: 15.5
+    STINGER_VSS: 0
+  response: '7BB10256201007F901E
+
     7BB2168FF716F6D0C41
+
     7BB22EF0B41FFFF0EFF
+
     7BB23FFFFFFFFFFFF0F
+
     7BB24EE1F2DFFFF0061
-    7BB25FF00FF00000000
+
+    7BB25FF00FF00000000'
 - expected_values:
-    KIA_HVAC_AAT: 18.5
-    KIA_HVAC_EVAPORATOR_T: 2.5
-    KIA_HVAC_HUMIDITY_SENSOR_FOR_AUTOMATIC_DEFOGGER: 25
-    KIA_HVAC_IAT: 18
-    KIA_HVAC_IAT_DRIVER_LEGS_VENT: 87.5
-    KIA_HVAC_IAT_DRIVER_VENT: 87.5
-    KIA_TEMP_EXT: 18.5
-    KIA_TEMP_INT: 18
-    KIA_VSS: 0
-  response: |-
-    7BB10256201007F901E
+    STINGER_TEMP_INT: 18
+    STINGER_TEMP_EXT: 18.5
+    STINGER_VSS: 0
+  response: '7BB10256201007F901E
+
     7BB2168FF74755504B4
+
     7BB223B04B5FFFFF0FF
+
     7BB23FFFFFFFFFFFF10
+
     7BB242319D6FFFF0085
-    7BB25FF00FF00000000
+
+    7BB25FF00FF00000000'
 - expected_values:
-    KIA_HVAC_AAT: 20.5
-    KIA_HVAC_EVAPORATOR_T: 4
-    KIA_HVAC_HUMIDITY_SENSOR_FOR_AUTOMATIC_DEFOGGER: 20
-    KIA_HVAC_IAT: 18
-    KIA_HVAC_IAT_DRIVER_LEGS_VENT: 87.5
-    KIA_HVAC_IAT_DRIVER_VENT: 87.5
-    KIA_TEMP_EXT: 20.5
-    KIA_TEMP_INT: 18
-    KIA_VSS: 0
-  response: |-
-    7BB10256201007F901E
+    STINGER_TEMP_INT: 18
+    STINGER_TEMP_EXT: 20.5
+    STINGER_VSS: 0
+  response: '7BB10256201007F901E
+
     7BB2168FF747958100F
+
     7BB223B1210FFFF0FFF
+
     7BB23FFFFFFFFFFFF0F
+
     7BB241014F1FFFF009A
-    7BB25FF01FF00000000
+
+    7BB25FF01FF00000000'
 - expected_values:
-    KIA_HVAC_AAT: 26
-    KIA_HVAC_EVAPORATOR_T: 3
-    KIA_HVAC_HUMIDITY_SENSOR_FOR_AUTOMATIC_DEFOGGER: 21
-    KIA_HVAC_IAT: 18.5
-    KIA_HVAC_IAT_DRIVER_LEGS_VENT: 87.5
-    KIA_HVAC_IAT_DRIVER_VENT: 87.5
-    KIA_TEMP_EXT: 26
-    KIA_TEMP_INT: 18.5
-    KIA_VSS: 95
-  response: |-
-    7BB10256201007F901E
+    STINGER_TEMP_INT: 18.5
+    STINGER_TEMP_EXT: 26
+    STINGER_VSS: 95
+  response: '7BB10256201007F901E
+
     7BB2168FF758456020F
+
     7BB223B020FFFFFF0FF
+
     7BB23FFFFFFFFFFFF16
+
     7BB241015F0FFFF5FC3
-    7BB25FF01FF00000000
+
+    7BB25FF01FF00000000'
 - expected_values:
-    KIA_HVAC_AAT: 26.5
-    KIA_HVAC_EVAPORATOR_T: 4
-    KIA_HVAC_HUMIDITY_SENSOR_FOR_AUTOMATIC_DEFOGGER: 22
-    KIA_HVAC_IAT: 18.5
-    KIA_HVAC_IAT_DRIVER_LEGS_VENT: 87.5
-    KIA_HVAC_IAT_DRIVER_VENT: 87.5
-    KIA_TEMP_EXT: 26.5
-    KIA_TEMP_INT: 18.5
-    KIA_VSS: 0
-  response: |-
-    7BB10256201007F901E
+    STINGER_TEMP_INT: 18.5
+    STINGER_TEMP_EXT: 26.5
+    STINGER_VSS: 0
+  response: '7BB10256201007F901E
+
     7BB2168FF758558010F
+
     7BB223B010FFFFFF1FF
+
     7BB23FFFFFFFFFFFF16
+
     7BB241016F2FFFF00C4
-    7BB25FF01FF00000000
+
+    7BB25FF01FF00000000'
 - expected_values:
-    KIA_HVAC_AAT: 21
-    KIA_HVAC_EVAPORATOR_T: 5
-    KIA_HVAC_HUMIDITY_SENSOR_FOR_AUTOMATIC_DEFOGGER: 21
-    KIA_HVAC_IAT: 19
-    KIA_HVAC_IAT_DRIVER_LEGS_VENT: 87.5
-    KIA_HVAC_IAT_DRIVER_VENT: 87.5
-    KIA_TEMP_EXT: 21
-    KIA_TEMP_INT: 19
-    KIA_VSS: 107
-  response: |-
-    7BB10256201007F901E
+    STINGER_TEMP_INT: 19
+    STINGER_TEMP_EXT: 21
+    STINGER_VSS: 107
+  response: '7BB10256201007F901E
+
     7BB2168FF767A5A0F58
+
     7BB223B0F58FFFF0FFF
+
     7BB23FFFFFFFFFFFF0F
+
     7BB241015F1FFFF6BB4
-    7BB25FF01FF00000000
+
+    7BB25FF01FF00000000'
 - expected_values:
-    KIA_HVAC_AAT: 28.5
-    KIA_HVAC_EVAPORATOR_T: 3
-    KIA_HVAC_HUMIDITY_SENSOR_FOR_AUTOMATIC_DEFOGGER: 22
-    KIA_HVAC_IAT: 19
-    KIA_HVAC_IAT_DRIVER_LEGS_VENT: 87.5
-    KIA_HVAC_IAT_DRIVER_VENT: 87.5
-    KIA_TEMP_EXT: 28.5
-    KIA_TEMP_INT: 19
-    KIA_VSS: 94
-  response: |-
-    7BB10256201007F901E
+    STINGER_TEMP_INT: 19
+    STINGER_TEMP_EXT: 28.5
+    STINGER_VSS: 94
+  response: '7BB10256201007F901E
+
     7BB2168FF7689560010
+
     7BB220F000FFFFFF1FF
+
     7BB23FFFFFFFFFFFF0B
+
     7BB241016EAFFFF5EC6
-    7BB25FF01FF00000000
+
+    7BB25FF01FF00000000'
 - expected_values:
-    KIA_HVAC_AAT: 30.5
-    KIA_HVAC_EVAPORATOR_T: 2.5
-    KIA_HVAC_HUMIDITY_SENSOR_FOR_AUTOMATIC_DEFOGGER: 18
-    KIA_HVAC_IAT: 19
-    KIA_HVAC_IAT_DRIVER_LEGS_VENT: 87.5
-    KIA_HVAC_IAT_DRIVER_VENT: 87.5
-    KIA_TEMP_EXT: 30.5
-    KIA_TEMP_INT: 19
-    KIA_VSS: 104
-  response: |-
-    7BB10256201007F901E
+    STINGER_TEMP_INT: 19
+    STINGER_TEMP_EXT: 30.5
+    STINGER_VSS: 104
+  response: '7BB10256201007F901E
+
     7BB2168FF768D552010
+
     7BB22102A10FFFFF0FF
+
     7BB23FFFFFFFFFFFF13
+
     7BB241012F1FFFF68C5
-    7BB25FF01FF00000000
+
+    7BB25FF01FF00000000'
 - expected_values:
-    KIA_HVAC_AAT: 31
-    KIA_HVAC_EVAPORATOR_T: 2
-    KIA_HVAC_HUMIDITY_SENSOR_FOR_AUTOMATIC_DEFOGGER: 17
-    KIA_HVAC_IAT: 19
-    KIA_HVAC_IAT_DRIVER_LEGS_VENT: 87.5
-    KIA_HVAC_IAT_DRIVER_VENT: 87.5
-    KIA_TEMP_EXT: 31
-    KIA_TEMP_INT: 19
-    KIA_VSS: 103
-  response: |-
-    7BB10256201007F901E
+    STINGER_TEMP_INT: 19
+    STINGER_TEMP_EXT: 31
+    STINGER_VSS: 103
+  response: '7BB10256201007F901E
+
     7BB2168FF768E542010
+
     7BB22102C10FFFFF0FF
+
     7BB23FFFFFFFFFFFF0F
+
     7BB241011F1FFFF67C2
-    7BB25FF01FF00000000
+
+    7BB25FF01FF00000000'
 - expected_values:
-    KIA_HVAC_AAT: 13
-    KIA_HVAC_EVAPORATOR_T: 5.5
-    KIA_HVAC_HUMIDITY_SENSOR_FOR_AUTOMATIC_DEFOGGER: 60
-    KIA_HVAC_IAT: 19.5
-    KIA_HVAC_IAT_DRIVER_LEGS_VENT: 87.5
-    KIA_HVAC_IAT_DRIVER_VENT: 87.5
-    KIA_TEMP_EXT: 13
-    KIA_TEMP_INT: 19.5
-    KIA_VSS: 111
-  response: |-
-    7BB10256201007F901E
+    STINGER_TEMP_INT: 19.5
+    STINGER_TEMP_EXT: 13
+    STINGER_VSS: 111
+  response: '7BB10256201007F901E
+
     7BB2168FF776A5B009F
+
     7BB22EF00A0FFFF0EFF
+
     7BB23FFFFFFFFFFFF0F
+
     7BB24103C2CFFFF6FB2
-    7BB25FF01FF00000000
+
+    7BB25FF01FF00000000'
 - expected_values:
-    KIA_HVAC_AAT: 24
-    KIA_HVAC_EVAPORATOR_T: 3.5
-    KIA_HVAC_HUMIDITY_SENSOR_FOR_AUTOMATIC_DEFOGGER: 24
-    KIA_HVAC_IAT: 20
-    KIA_HVAC_IAT_DRIVER_LEGS_VENT: 87.5
-    KIA_HVAC_IAT_DRIVER_VENT: 87.5
-    KIA_TEMP_EXT: 24
-    KIA_TEMP_INT: 20
-    KIA_VSS: 89
-  response: |-
-    7BB10256201007F901E
+    STINGER_TEMP_INT: 20
+    STINGER_TEMP_EXT: 24
+    STINGER_VSS: 89
+  response: '7BB10256201007F901E
+
     7BB2168FF7880570610
+
     7BB22110710FFFFEFFF
+
     7BB23FFFFFFFFFFFF0F
+
     7BB241018F4FFFF59C5
-    7BB25FF01FF00000000
+
+    7BB25FF01FF00000000'
 - expected_values:
-    KIA_HVAC_AAT: 30
-    KIA_HVAC_EVAPORATOR_T: 4.5
-    KIA_HVAC_HUMIDITY_SENSOR_FOR_AUTOMATIC_DEFOGGER: 12
-    KIA_HVAC_IAT: 20
-    KIA_HVAC_IAT_DRIVER_LEGS_VENT: 87.5
-    KIA_HVAC_IAT_DRIVER_VENT: 87.5
-    KIA_TEMP_EXT: 30
-    KIA_TEMP_INT: 20
-    KIA_VSS: 0
-  response: |-
-    7BB10256201007F901E
+    STINGER_TEMP_INT: 20
+    STINGER_TEMP_EXT: 30
+    STINGER_VSS: 0
+  response: '7BB10256201007F901E
+
     7BB2168FF788C592010
+
     7BB22102910FFFFF0FF
+
     7BB23FFFFFFFFFFFF0C
+
     7BB24100CF1FFFF00C5
-    7BB25FF01FF00000000
+
+    7BB25FF01FF00000000'
 - expected_values:
-    KIA_HVAC_AAT: 28.5
-    KIA_HVAC_EVAPORATOR_T: 8
-    KIA_HVAC_HUMIDITY_SENSOR_FOR_AUTOMATIC_DEFOGGER: 17
-    KIA_HVAC_IAT: 21.5
-    KIA_HVAC_IAT_DRIVER_LEGS_VENT: 87.5
-    KIA_HVAC_IAT_DRIVER_VENT: 87.5
-    KIA_TEMP_EXT: 28.5
-    KIA_TEMP_INT: 21.5
-    KIA_VSS: 73
-  response: |-
-    7BB10256201007F901E
+    STINGER_TEMP_INT: 21.5
+    STINGER_TEMP_EXT: 28.5
+    STINGER_VSS: 73
+  response: '7BB10256201007F901E
+
     7BB2168FF7B89600D10
+
     7BB22100C10FFFF0FFF
+
     7BB23FFFFFFFFFFFF0E
+
     7BB241011F1FFFF49C5
-    7BB25FF01FF00000000
+
+    7BB25FF01FF00000000'
 - expected_values:
-    KIA_HVAC_AAT: 23
-    KIA_HVAC_EVAPORATOR_T: 3.5
-    KIA_HVAC_HUMIDITY_SENSOR_FOR_AUTOMATIC_DEFOGGER: 34
-    KIA_HVAC_IAT: 22
-    KIA_HVAC_IAT_DRIVER_LEGS_VENT: 87.5
-    KIA_HVAC_IAT_DRIVER_VENT: 87.5
-    KIA_TEMP_EXT: 23
-    KIA_TEMP_INT: 22
-    KIA_VSS: 11
-  response: |-
-    7BB10256201007F901E
+    STINGER_TEMP_INT: 22
+    STINGER_TEMP_EXT: 23
+    STINGER_VSS: 11
+  response: '7BB10256201007F901E
+
     7BB2168FF7C7E57013A
+
     7BB22680336FFFF0EFF
+
     7BB23FFFFFFFFFFFFD1
+
     7BB24EE22F3FFFF0BC5
-    7BB25FF01FF00000000
+
+    7BB25FF01FF00000000'
 - expected_values:
-    KIA_HVAC_AAT: 23.5
-    KIA_HVAC_EVAPORATOR_T: 6
-    KIA_HVAC_HUMIDITY_SENSOR_FOR_AUTOMATIC_DEFOGGER: 30
-    KIA_HVAC_IAT: 22.5
-    KIA_HVAC_IAT_DRIVER_LEGS_VENT: 87.5
-    KIA_HVAC_IAT_DRIVER_VENT: 87.5
-    KIA_TEMP_EXT: 23.5
-    KIA_TEMP_INT: 22.5
-    KIA_VSS: 157
-  response: |-
-    7BB10256201007F901E
+    STINGER_TEMP_INT: 22.5
+    STINGER_TEMP_EXT: 23.5
+    STINGER_VSS: 157
+  response: '7BB10256201007F901E
+
     7BB2168FF7D7F5C0347
+
     7BB223D0348FFFF0DFF
+
     7BB23FFFFFFFFFFFF0F
+
     7BB24101EEFFFFF9DB7
-    7BB25FF01FF00000000
+
+    7BB25FF01FF00000000'
 - expected_values:
-    KIA_HVAC_AAT: 31.5
-    KIA_HVAC_EVAPORATOR_T: 4
-    KIA_HVAC_HUMIDITY_SENSOR_FOR_AUTOMATIC_DEFOGGER: 6
-    KIA_HVAC_IAT: 23
-    KIA_HVAC_IAT_DRIVER_LEGS_VENT: 87.5
-    KIA_HVAC_IAT_DRIVER_VENT: 87.5
-    KIA_TEMP_EXT: 31.5
-    KIA_TEMP_INT: 23
-    KIA_VSS: 0
-  response: |-
-    7BB10256201007F901E
+    STINGER_TEMP_INT: 23
+    STINGER_TEMP_EXT: 31.5
+    STINGER_VSS: 0
+  response: '7BB10256201007F901E
+
     7BB2168FF7E8F58370F
+
     7BB22103310FFFFEFFF
+
     7BB23FFFFFFFFFFFF0F
+
     7BB241006EFFFFF00BE
-    7BB25FF01FF00000000
+
+    7BB25FF01FF00000000'
 - expected_values:
-    KIA_HVAC_AAT: 35.5
-    KIA_HVAC_EVAPORATOR_T: 1.5
-    KIA_HVAC_HUMIDITY_SENSOR_FOR_AUTOMATIC_DEFOGGER: 12
-    KIA_HVAC_IAT: 23
-    KIA_HVAC_IAT_DRIVER_LEGS_VENT: 87.5
-    KIA_HVAC_IAT_DRIVER_VENT: 87.5
-    KIA_TEMP_EXT: 35.5
-    KIA_TEMP_INT: 23
-    KIA_VSS: 42
-  response: |-
-    7BB10256201007F901E
+    STINGER_TEMP_INT: 23
+    STINGER_TEMP_EXT: 35.5
+    STINGER_VSS: 42
+  response: '7BB10256201007F901E
+
     7BB2168FF7E97532A10
+
     7BB22111611FFFFF0FF
+
     7BB23FFFFFFFFFFFF0E
+
     7BB24100CF7FFFF2ABF
-    7BB25FF01FF00000000
+
+    7BB25FF01FF00000000'
 - expected_values:
-    KIA_HVAC_AAT: 30.5
-    KIA_HVAC_EVAPORATOR_T: 7
-    KIA_HVAC_HUMIDITY_SENSOR_FOR_AUTOMATIC_DEFOGGER: 35
-    KIA_HVAC_IAT: 23.5
-    KIA_HVAC_IAT_DRIVER_LEGS_VENT: 87.5
-    KIA_HVAC_IAT_DRIVER_VENT: 87.5
-    KIA_TEMP_EXT: 30.5
-    KIA_TEMP_INT: 23.5
-    KIA_VSS: 17
-  response: |-
-    7BB10256201007F901E
+    STINGER_TEMP_INT: 23.5
+    STINGER_TEMP_EXT: 30.5
+    STINGER_VSS: 17
+  response: '7BB10256201007F901E
+
     7BB2168FF7F8D5E0048
+
     7BB22F00149FFFF12FF
+
     7BB23FFFFFFFFFFFF14
+
     7BB2410232EFFFF11C0
-    7BB25FF01FF00000000
+
+    7BB25FF01FF00000000'
 - expected_values:
-    KIA_HVAC_AAT: 32
-    KIA_HVAC_EVAPORATOR_T: 2
-    KIA_HVAC_HUMIDITY_SENSOR_FOR_AUTOMATIC_DEFOGGER: 9
-    KIA_HVAC_IAT: 23.5
-    KIA_HVAC_IAT_DRIVER_LEGS_VENT: 87.5
-    KIA_HVAC_IAT_DRIVER_VENT: 87.5
-    KIA_TEMP_EXT: 32
-    KIA_TEMP_INT: 23.5
-    KIA_VSS: 0
-  response: |-
-    7BB10256201007F901E
+    STINGER_TEMP_INT: 23.5
+    STINGER_TEMP_EXT: 32
+    STINGER_VSS: 0
+  response: '7BB10256201007F901E
+
     7BB2168FF7F90540810
+
     7BB223D0910FFFFEFFF
+
     7BB23FFFFFFFFFFFF16
+
     7BB242209F2FFFF00C2
-    7BB25FF01FF00000000
+
+    7BB25FF01FF00000000'
 - expected_values:
-    KIA_HVAC_AAT: 21.5
-    KIA_HVAC_EVAPORATOR_T: 3.5
-    KIA_HVAC_HUMIDITY_SENSOR_FOR_AUTOMATIC_DEFOGGER: 25
-    KIA_HVAC_IAT: 24
-    KIA_HVAC_IAT_DRIVER_LEGS_VENT: 87.5
-    KIA_HVAC_IAT_DRIVER_VENT: 87.5
-    KIA_TEMP_EXT: 21.5
-    KIA_TEMP_INT: 24
-    KIA_VSS: 102
-  response: |-
-    7BB10256201007F901E
+    STINGER_TEMP_INT: 24
+    STINGER_TEMP_EXT: 21.5
+    STINGER_VSS: 102
+  response: '7BB10256201007F901E
+
     7BB2168FF807B570410
+
     7BB22100910FFFF0FFF
+
     7BB23FFFFFFFFFFFF0F
+
     7BB241019D2FFFF66CA
-    7BB25FF01FF00000000
+
+    7BB25FF01FF00000000'
 - expected_values:
-    KIA_HVAC_AAT: 18
-    KIA_HVAC_EVAPORATOR_T: 6
-    KIA_HVAC_HUMIDITY_SENSOR_FOR_AUTOMATIC_DEFOGGER: 16
-    KIA_HVAC_IAT: 25
-    KIA_HVAC_IAT_DRIVER_LEGS_VENT: 87.5
-    KIA_HVAC_IAT_DRIVER_VENT: 87.5
-    KIA_TEMP_EXT: 18
-    KIA_TEMP_INT: 25
-    KIA_VSS: 0
-  response: |-
-    7BB10256201007F901E
+    STINGER_TEMP_INT: 25
+    STINGER_TEMP_EXT: 18
+    STINGER_VSS: 0
+  response: '7BB10256201007F901E
+
     7BB2168FF82745C3955
+
     7BB22944554FFFFEEFF
+
     7BB23FFFFFFFFFFFF0F
+
     7BB241010ECFFFF00AB
-    7BB25FF01FF00000000
+
+    7BB25FF01FF00000000'
 - expected_values:
-    KIA_HVAC_AAT: 23.5
-    KIA_HVAC_EVAPORATOR_T: 5.5
-    KIA_HVAC_HUMIDITY_SENSOR_FOR_AUTOMATIC_DEFOGGER: 76
-    KIA_HVAC_IAT: 26.5
-    KIA_HVAC_IAT_DRIVER_LEGS_VENT: 87.5
-    KIA_HVAC_IAT_DRIVER_VENT: 87.5
-    KIA_TEMP_EXT: 23.5
-    KIA_TEMP_INT: 26.5
-    KIA_VSS: 90
-  response: |-
-    7BB10256201007F901E
+    STINGER_TEMP_INT: 26.5
+    STINGER_TEMP_EXT: 23.5
+    STINGER_VSS: 90
+  response: '7BB10256201007F901E
+
     7BB2168FF857F5B0031
+
     7BB223A0032FFFF0FFF
+
     7BB23FFFFFFFFFFFF0E
+
     7BB24104CF6FFFF5AC2
-    7BB25FF01FF00000000
+
+    7BB25FF01FF00000000'
 - expected_values:
-    KIA_HVAC_AAT: 35
-    KIA_HVAC_EVAPORATOR_T: 7.5
-    KIA_HVAC_HUMIDITY_SENSOR_FOR_AUTOMATIC_DEFOGGER: 11
-    KIA_HVAC_IAT: 27.5
-    KIA_HVAC_IAT_DRIVER_LEGS_VENT: 87.5
-    KIA_HVAC_IAT_DRIVER_VENT: 87.5
-    KIA_TEMP_EXT: 35
-    KIA_TEMP_INT: 27.5
-    KIA_VSS: 70
-  response: |-
-    7BB10256201007F901E
+    STINGER_TEMP_INT: 27.5
+    STINGER_TEMP_EXT: 35
+    STINGER_VSS: 70
+  response: '7BB10256201007F901E
+
     7BB2168FF87965F3010
+
     7BB2210340FFFFF50FF
+
     7BB23FFFFFFFFFFFF0C
+
     7BB24220BEEFFFF46BE
-    7BB25FF01FF00000000
+
+    7BB25FF01FF00000000'
 - expected_values:
-    KIA_HVAC_AAT: 29
-    KIA_HVAC_EVAPORATOR_T: 13
-    KIA_HVAC_HUMIDITY_SENSOR_FOR_AUTOMATIC_DEFOGGER: 40
-    KIA_HVAC_IAT: 35
-    KIA_HVAC_IAT_DRIVER_LEGS_VENT: 87.5
-    KIA_HVAC_IAT_DRIVER_VENT: 87.5
-    KIA_TEMP_EXT: 29
-    KIA_TEMP_INT: 35
-    KIA_VSS: 9
-  response: |-
-    7BB10256201007F901E
+    STINGER_TEMP_INT: 35
+    STINGER_TEMP_EXT: 29
+    STINGER_VSS: 9
+  response: '7BB10256201007F901E
+
     7BB2168FF968A6A010F
+
     7BB2210010FFFFF0AFF
+
     7BB23FFFFFFFFFFFF08
+
     7BB243A28F5FFFF09AE
-    7BB25FF01FF00000000
+
+    7BB25FF01FF00000000'
 - expected_values:
-    KIA_HVAC_AAT: 31.5
-    KIA_HVAC_EVAPORATOR_T: 36.5
-    KIA_HVAC_HUMIDITY_SENSOR_FOR_AUTOMATIC_DEFOGGER: 39
-    KIA_HVAC_IAT: 46
-    KIA_HVAC_IAT_DRIVER_LEGS_VENT: 87.5
-    KIA_HVAC_IAT_DRIVER_VENT: 87.5
-    KIA_TEMP_EXT: 31.5
-    KIA_TEMP_INT: 46
-    KIA_VSS: 7
-  response: |-
-    7BB10256201007F901E
+    STINGER_TEMP_INT: 46
+    STINGER_TEMP_EXT: 31.5
+    STINGER_VSS: 7
+  response: '7BB10256201007F901E
+
     7BB2168FFAC8F990510
+
     7BB22100610FFFF54FF
+
     7BB23FFFFFFFFFFFF0F
+
     7BB241027F0FFFF077D
-    7BB25FF01FF00000000
+
+    7BB25FF01FF00000000'
 - expected_values:
-    KIA_HVAC_AAT: 34.5
-    KIA_HVAC_EVAPORATOR_T: 17.5
-    KIA_HVAC_HUMIDITY_SENSOR_FOR_AUTOMATIC_DEFOGGER: 13
-    KIA_HVAC_IAT: 49.5
-    KIA_HVAC_IAT_DRIVER_LEGS_VENT: 87.5
-    KIA_HVAC_IAT_DRIVER_VENT: 87.5
-    KIA_TEMP_EXT: 34.5
-    KIA_TEMP_INT: 49.5
-    KIA_VSS: 9
-  response: |-
-    7BB10256201007F901E
+    STINGER_TEMP_INT: 49.5
+    STINGER_TEMP_EXT: 34.5
+    STINGER_VSS: 9
+  response: '7BB10256201007F901E
+
     7BB2168FFB395731C0F
+
     7BB22100A0FFFFFF0FF
+
     7BB23FFFFFFFFFFFF17
+
     7BB24100DE8FFFF098B
-    7BB25FF01FF00000000
+
+    7BB25FF01FF00000000'
