--- a/tests/test_cases/2018/commands/7C6.7CE.22B002|fc=1.yaml
+++ b/tests/test_cases/2018/commands/7C6.7CE.22B002|fc=1.yaml
@@ -1,134 +1,122 @@
 command_id: 7C6.7CE.22B002|fc=1
 test_cases:
 - expected_values:
-    KIA_CLUSTER_VOLTAGE: 12.65625
-    KIA_FLI_VOL: 10
-    KIA_FLI_VOL_THIRDGEN: 5
-    KIA_ODO_KM: 0
-    KIA_ODO_MI: 64818
-    KIA_VPWR: 12.65625
-  response: |-
-    7CE100F62B002D00000
+    STINGER_FLI_VOL: 10
+    STINGER_CLUSTER_VOLTAGE: 12.65625
+    STINGER_ODO_KM: 0
+    STINGER_ODO_MI: 64818
+  response: '7CE100F62B002D00000
+
     7CE21000AA200000000
-    7CE22FD320000000000
+
+    7CE22FD320000000000'
 - expected_values:
-    KIA_CLUSTER_VOLTAGE: 14.14062
-    KIA_FLI_VOL: 13
-    KIA_FLI_VOL_THIRDGEN: 6.5
-    KIA_ODO_KM: 0
-    KIA_ODO_MI: 65308
-    KIA_VPWR: 14.14062
-  response: |-
-    7CE100F62B002D00000
+    STINGER_FLI_VOL: 13
+    STINGER_CLUSTER_VOLTAGE: 14.14062
+    STINGER_ODO_KM: 0
+    STINGER_ODO_MI: 65308
+  response: '7CE100F62B002D00000
+
     7CE21000DB500000000
-    7CE22FF1C0000000000
+
+    7CE22FF1C0000000000'
 - expected_values:
-    KIA_CLUSTER_VOLTAGE: 13.67188
-    KIA_FLI_VOL: 14
-    KIA_FLI_VOL_THIRDGEN: 7
-    KIA_ODO_KM: 0
-    KIA_ODO_MI: 64822
-    KIA_VPWR: 13.67188
-  response: |-
-    7CE100F62B002D00000
+    STINGER_FLI_VOL: 14
+    STINGER_CLUSTER_VOLTAGE: 13.67188
+    STINGER_ODO_KM: 0
+    STINGER_ODO_MI: 64822
+  response: '7CE100F62B002D00000
+
     7CE21000EAF00000000
-    7CE22FD360000000000
+
+    7CE22FD360000000000'
 - expected_values:
-    KIA_CLUSTER_VOLTAGE: 12.5
-    KIA_FLI_VOL: 16
-    KIA_FLI_VOL_THIRDGEN: 8
-    KIA_ODO_KM: 0
-    KIA_ODO_MI: 64813
-    KIA_VPWR: 12.5
-  response: |-
-    7CE100F62B002D00000
+    STINGER_FLI_VOL: 16
+    STINGER_CLUSTER_VOLTAGE: 12.5
+    STINGER_ODO_KM: 0
+    STINGER_ODO_MI: 64813
+  response: '7CE100F62B002D00000
+
     7CE210010A000000000
-    7CE22FD2D0000000000
+
+    7CE22FD2D0000000000'
 - expected_values:
-    KIA_CLUSTER_VOLTAGE: 13.90625
-    KIA_FLI_VOL: 16
-    KIA_FLI_VOL_THIRDGEN: 8
-    KIA_ODO_KM: 0
-    KIA_ODO_MI: 64806
-    KIA_VPWR: 13.90625
-  response: |-
-    7CE100F62B002D00000
+    STINGER_FLI_VOL: 16
+    STINGER_CLUSTER_VOLTAGE: 13.90625
+    STINGER_ODO_KM: 0
+    STINGER_ODO_MI: 64806
+  response: '7CE100F62B002D00000
+
     7CE210010B200000000
-    7CE22FD260000000000
+
+    7CE22FD260000000000'
 - expected_values:
-    KIA_CLUSTER_VOLTAGE: 14.21875
-    KIA_FLI_VOL: 24
-    KIA_FLI_VOL_THIRDGEN: 12
-    KIA_ODO_KM: 0
-    KIA_ODO_MI: 66253
-    KIA_VPWR: 14.21875
-  response: |-
-    7CE100F62B002D00000
+    STINGER_FLI_VOL: 24
+    STINGER_CLUSTER_VOLTAGE: 14.21875
+    STINGER_ODO_KM: 0
+    STINGER_ODO_MI: 66253
+  response: '7CE100F62B002D00000
+
     7CE210018B600000001
-    7CE2202CD0000000000
+
+    7CE2202CD0000000000'
 - expected_values:
-    KIA_CLUSTER_VOLTAGE: 14.14062
-    KIA_FLI_VOL: 29
-    KIA_FLI_VOL_THIRDGEN: 14.5
-    KIA_ODO_KM: 0
-    KIA_ODO_MI: 63231
-    KIA_VPWR: 14.14062
-  response: |-
-    7CE100F62B002D00000
+    STINGER_FLI_VOL: 29
+    STINGER_CLUSTER_VOLTAGE: 14.14062
+    STINGER_ODO_KM: 0
+    STINGER_ODO_MI: 63231
+  response: '7CE100F62B002D00000
+
     7CE21001DB500000000
-    7CE22F6FF0000000000
+
+    7CE22F6FF0000000000'
 - expected_values:
-    KIA_CLUSTER_VOLTAGE: 14.14062
-    KIA_FLI_VOL: 29
-    KIA_FLI_VOL_THIRDGEN: 14.5
-    KIA_ODO_KM: 0
-    KIA_ODO_MI: 63232
-    KIA_VPWR: 14.14062
-  response: |-
-    7CE100F62B002D00000
+    STINGER_FLI_VOL: 29
+    STINGER_CLUSTER_VOLTAGE: 14.14062
+    STINGER_ODO_KM: 0
+    STINGER_ODO_MI: 63232
+  response: '7CE100F62B002D00000
+
     7CE21001DB500000000
-    7CE22F7000000000000
+
+    7CE22F7000000000000'
 - expected_values:
-    KIA_CLUSTER_VOLTAGE: 14.21875
-    KIA_FLI_VOL: 30
-    KIA_FLI_VOL_THIRDGEN: 15
-    KIA_ODO_KM: 0
-    KIA_ODO_MI: 65557
-    KIA_VPWR: 14.21875
-  response: |-
-    7CE100F62B002D00000
+    STINGER_FLI_VOL: 30
+    STINGER_CLUSTER_VOLTAGE: 14.21875
+    STINGER_ODO_KM: 0
+    STINGER_ODO_MI: 65557
+  response: '7CE100F62B002D00000
+
     7CE21001EB600000001
-    7CE2200150000000000
+
+    7CE2200150000000000'
 - expected_values:
-    KIA_CLUSTER_VOLTAGE: 14.0625
-    KIA_FLI_VOL: 31
-    KIA_FLI_VOL_THIRDGEN: 15.5
-    KIA_ODO_KM: 0
-    KIA_ODO_MI: 64780
-    KIA_VPWR: 14.0625
-  response: |-
-    7CE100F62B002D00000
+    STINGER_FLI_VOL: 31
+    STINGER_CLUSTER_VOLTAGE: 14.0625
+    STINGER_ODO_KM: 0
+    STINGER_ODO_MI: 64780
+  response: '7CE100F62B002D00000
+
     7CE21001FB400000000
-    7CE22FD0C0000000000
+
+    7CE22FD0C0000000000'
 - expected_values:
-    KIA_CLUSTER_VOLTAGE: 12.26562
-    KIA_FLI_VOL: 32
-    KIA_FLI_VOL_THIRDGEN: 16
-    KIA_ODO_KM: 0
-    KIA_ODO_MI: 63160
-    KIA_VPWR: 12.26562
-  response: |-
-    7CE100F62B002D00000
+    STINGER_FLI_VOL: 32
+    STINGER_CLUSTER_VOLTAGE: 12.26562
+    STINGER_ODO_KM: 0
+    STINGER_ODO_MI: 63160
+  response: '7CE100F62B002D00000
+
     7CE2100209D00000000
-    7CE22F6B80000000000
+
+    7CE22F6B80000000000'
 - expected_values:
-    KIA_CLUSTER_VOLTAGE: 12.26562
-    KIA_FLI_VOL: 255
-    KIA_FLI_VOL_THIRDGEN: 127.5
-    KIA_ODO_KM: 0
-    KIA_ODO_MI: 64780
-    KIA_VPWR: 12.26562
-  response: |-
-    7CE100F62B002D00000
+    STINGER_FLI_VOL: 255
+    STINGER_CLUSTER_VOLTAGE: 12.26562
+    STINGER_ODO_KM: 0
+    STINGER_ODO_MI: 64780
+  response: '7CE100F62B002D00000
+
     7CE2100FF9D00000000
-    7CE22FD0C0000000000
+
+    7CE22FD0C0000000000'
