--- a/tests/test_cases/2021/commands/7B3.7BB.220100|fc=1.yaml
+++ b/tests/test_cases/2021/commands/7B3.7BB.220100|fc=1.yaml
@@ -1,342 +1,302 @@
 command_id: 7B3.7BB.220100|fc=1
 test_cases:
 - expected_values:
-    KIA_HVAC_AAT: 2
-    KIA_HVAC_EVAPORATOR_T: 0
-    KIA_HVAC_HUMIDITY_SENSOR_FOR_AUTOMATIC_DEFOGGER: 85
-    KIA_HVAC_IAT: 3
-    KIA_HVAC_IAT_DRIVER_LEGS_VENT: 87.5
-    KIA_HVAC_IAT_DRIVER_VENT: 87.5
-    KIA_TEMP_EXT: 2
-    KIA_TEMP_INT: 3
-    KIA_VSS: 0
-  response: |-
-    7BB10256201007F901E
+    STINGER_TEMP_INT: 3
+    STINGER_TEMP_EXT: 2
+    STINGER_VSS: 0
+  response: '7BB10256201007F901E
+
     7BB2168FF56545000EF
+
     7BB22EF00EFFFFF10FF
+
     7BB23FFFFFFFFFFEB10
+
     7BB24EE552DFFFF0068
-    7BB25FF00FFAAAAAAAA
+
+    7BB25FF00FFAAAAAAAA'
 - expected_values:
-    KIA_HVAC_AAT: 3
-    KIA_HVAC_EVAPORATOR_T: 2
-    KIA_HVAC_HUMIDITY_SENSOR_FOR_AUTOMATIC_DEFOGGER: 94
-    KIA_HVAC_IAT: 3.5
-    KIA_HVAC_IAT_DRIVER_LEGS_VENT: 87.5
-    KIA_HVAC_IAT_DRIVER_VENT: 87.5
-    KIA_TEMP_EXT: 3
-    KIA_TEMP_INT: 3.5
-    KIA_VSS: 0
-  response: |-
-    7BB10256201007F901E
+    STINGER_TEMP_INT: 3.5
+    STINGER_TEMP_EXT: 3
+    STINGER_VSS: 0
+  response: '7BB10256201007F901E
+
     7BB2168FF57565400EF
+
     7BB22EF00EFFFFF0EFF
+
     7BB23FFFFFFFFFFE60F
+
     7BB242D5E2EFFFF0067
-    7BB25FF01FFAAAAAAAA
+
+    7BB25FF01FFAAAAAAAA'
 - expected_values:
-    KIA_HVAC_AAT: 3
-    KIA_HVAC_EVAPORATOR_T: -0.5
-    KIA_HVAC_HUMIDITY_SENSOR_FOR_AUTOMATIC_DEFOGGER: 95
-    KIA_HVAC_IAT: 4
-    KIA_HVAC_IAT_DRIVER_LEGS_VENT: 87.5
-    KIA_HVAC_IAT_DRIVER_VENT: 87.5
-    KIA_TEMP_EXT: 3
-    KIA_TEMP_INT: 4
-    KIA_VSS: 0
-  response: |-
-    7BB10256201007F901E
+    STINGER_TEMP_INT: 4
+    STINGER_TEMP_EXT: 3
+    STINGER_VSS: 0
+  response: '7BB10256201007F901E
+
     7BB2168FF58564F00EF
+
     7BB22EF00EFFFFF0EFF
+
     7BB23FFFFFFFFFFE60F
+
     7BB242D5F2DFFFF006E
-    7BB25FF00FFAAAAAAAA
+
+    7BB25FF00FFAAAAAAAA'
 - expected_values:
-    KIA_HVAC_AAT: 4.5
-    KIA_HVAC_EVAPORATOR_T: 2
-    KIA_HVAC_HUMIDITY_SENSOR_FOR_AUTOMATIC_DEFOGGER: 94
-    KIA_HVAC_IAT: 5.5
-    KIA_HVAC_IAT_DRIVER_LEGS_VENT: 87.5
-    KIA_HVAC_IAT_DRIVER_VENT: 87.5
-    KIA_TEMP_EXT: 4.5
-    KIA_TEMP_INT: 5.5
-    KIA_VSS: 30
-  response: |-
-    7BB10256201007F901E
+    STINGER_TEMP_INT: 5.5
+    STINGER_TEMP_EXT: 4.5
+    STINGER_VSS: 30
+  response: '7BB10256201007F901E
+
     7BB2168FF5B595400EF
+
     7BB22C500EFFFFF10FF
+
     7BB23FFFFFFFFFF4D0F
+
     7BB242D5EB9FFFF1E78
-    7BB25FF01FFAAAAAAAA
+
+    7BB25FF01FFAAAAAAAA'
 - expected_values:
-    KIA_HVAC_AAT: 4.5
-    KIA_HVAC_EVAPORATOR_T: 0
-    KIA_HVAC_HUMIDITY_SENSOR_FOR_AUTOMATIC_DEFOGGER: 90
-    KIA_HVAC_IAT: 9
-    KIA_HVAC_IAT_DRIVER_LEGS_VENT: 87.5
-    KIA_HVAC_IAT_DRIVER_VENT: 87.5
-    KIA_TEMP_EXT: 4.5
-    KIA_TEMP_INT: 9
-    KIA_VSS: 0
-  response: |-
-    7BB10256201007F901E
+    STINGER_TEMP_INT: 9
+    STINGER_TEMP_EXT: 4.5
+    STINGER_VSS: 0
+  response: '7BB10256201007F901E
+
     7BB2168FF62595000EF
+
     7BB22C400EFFFFF0EFF
+
     7BB23FFFFFFFFFFEFDB
+
     7BB24EE5AB9FFFF0078
-    7BB25FF00FFAAAAAAAA
+
+    7BB25FF00FFAAAAAAAA'
 - expected_values:
-    KIA_HVAC_AAT: 7.5
-    KIA_HVAC_EVAPORATOR_T: 1
-    KIA_HVAC_HUMIDITY_SENSOR_FOR_AUTOMATIC_DEFOGGER: 88
-    KIA_HVAC_IAT: 9
-    KIA_HVAC_IAT_DRIVER_LEGS_VENT: 87.5
-    KIA_HVAC_IAT_DRIVER_VENT: 87.5
-    KIA_TEMP_EXT: 7.5
-    KIA_TEMP_INT: 9
-    KIA_VSS: 0
-  response: |-
-    7BB10256201007F901E
+    STINGER_TEMP_INT: 9
+    STINGER_TEMP_EXT: 7.5
+    STINGER_VSS: 0
+  response: '7BB10256201007F901E
+
     7BB2168FF625F5200EF
+
     7BB22EF00EFFFFF0EFF
+
     7BB23FFFFFFFFFFE80F
+
     7BB242D582CFFFF006A
-    7BB25FF01FFAAAAAAAA
+
+    7BB25FF01FFAAAAAAAA'
 - expected_values:
-    KIA_HVAC_AAT: 9.5
-    KIA_HVAC_EVAPORATOR_T: 1
-    KIA_HVAC_HUMIDITY_SENSOR_FOR_AUTOMATIC_DEFOGGER: 76
-    KIA_HVAC_IAT: 9
-    KIA_HVAC_IAT_DRIVER_LEGS_VENT: 87.5
-    KIA_HVAC_IAT_DRIVER_VENT: 87.5
-    KIA_TEMP_EXT: 9.5
-    KIA_TEMP_INT: 9
-    KIA_VSS: 0
-  response: |-
-    7BB10256201007F901E
+    STINGER_TEMP_INT: 9
+    STINGER_TEMP_EXT: 9.5
+    STINGER_VSS: 0
+  response: '7BB10256201007F901E
+
     7BB2168FF62635200EF
+
     7BB22EF00EFFFFF0EFF
+
     7BB23FFFFFFFFFFE80F
+
     7BB242D4C2CFFFF0059
-    7BB25FF01FFAAAAAAAA
+
+    7BB25FF01FFAAAAAAAA'
 - expected_values:
-    KIA_HVAC_AAT: 8
-    KIA_HVAC_EVAPORATOR_T: 2.5
-    KIA_HVAC_HUMIDITY_SENSOR_FOR_AUTOMATIC_DEFOGGER: 70
-    KIA_HVAC_IAT: 10
-    KIA_HVAC_IAT_DRIVER_LEGS_VENT: 87.5
-    KIA_HVAC_IAT_DRIVER_VENT: 87.5
-    KIA_TEMP_EXT: 8
-    KIA_TEMP_INT: 10
-    KIA_VSS: 0
-  response: |-
-    7BB10256201007F901E
+    STINGER_TEMP_INT: 10
+    STINGER_TEMP_EXT: 8
+    STINGER_VSS: 0
+  response: '7BB10256201007F901E
+
     7BB2168FF64605500EF
+
     7BB22EF00EFFFFF0FFF
+
     7BB23FFFFFFFFFFE80F
+
     7BB242D462EFFFF006C
-    7BB25FF01FFAAAAAAAA
+
+    7BB25FF01FFAAAAAAAA'
 - expected_values:
-    KIA_HVAC_AAT: 11.5
-    KIA_HVAC_EVAPORATOR_T: 1
-    KIA_HVAC_HUMIDITY_SENSOR_FOR_AUTOMATIC_DEFOGGER: 57
-    KIA_HVAC_IAT: 12.5
-    KIA_HVAC_IAT_DRIVER_LEGS_VENT: 87.5
-    KIA_HVAC_IAT_DRIVER_VENT: 87.5
-    KIA_TEMP_EXT: 11.5
-    KIA_TEMP_INT: 12.5
-    KIA_VSS: 0
-  response: |-
-    7BB10256201007F901E
+    STINGER_TEMP_INT: 12.5
+    STINGER_TEMP_EXT: 11.5
+    STINGER_VSS: 0
+  response: '7BB10256201007F901E
+
     7BB2168FF69675202EF
+
     7BB22F003EFFFFF10FF
+
     7BB23FFFFFFFFFFE80F
+
     7BB242D392CFFFF0063
-    7BB25FF01FFAAAAAAAA
+
+    7BB25FF01FFAAAAAAAA'
 - expected_values:
-    KIA_HVAC_AAT: 5.5
-    KIA_HVAC_EVAPORATOR_T: 1
-    KIA_HVAC_HUMIDITY_SENSOR_FOR_AUTOMATIC_DEFOGGER: 59
-    KIA_HVAC_IAT: 16
-    KIA_HVAC_IAT_DRIVER_LEGS_VENT: 87.5
-    KIA_HVAC_IAT_DRIVER_VENT: 87.5
-    KIA_TEMP_EXT: 5.5
-    KIA_TEMP_INT: 16
-    KIA_VSS: 37
-  response: |-
-    7BB10256201007F901E
+    STINGER_TEMP_INT: 16
+    STINGER_TEMP_EXT: 5.5
+    STINGER_VSS: 37
+  response: '7BB10256201007F901E
+
     7BB2168FF705B520AEF
+
     7BB229706EDFFFF0FFF
+
     7BB23FFFFFFFFFF4C0F
+
     7BB242D3BD0FFFF2595
-    7BB25FF01FFAAAAAAAA
+
+    7BB25FF01FFAAAAAAAA'
 - expected_values:
-    KIA_HVAC_AAT: 5.5
-    KIA_HVAC_EVAPORATOR_T: 1.5
-    KIA_HVAC_HUMIDITY_SENSOR_FOR_AUTOMATIC_DEFOGGER: 59
-    KIA_HVAC_IAT: 18
-    KIA_HVAC_IAT_DRIVER_LEGS_VENT: 87.5
-    KIA_HVAC_IAT_DRIVER_VENT: 87.5
-    KIA_TEMP_EXT: 5.5
-    KIA_TEMP_INT: 18
-    KIA_VSS: 0
-  response: |-
-    7BB10256201007F901E
+    STINGER_TEMP_INT: 18
+    STINGER_TEMP_EXT: 5.5
+    STINGER_VSS: 0
+  response: '7BB10256201007F901E
+
     7BB2168FF745B5303C0
+
     7BB229703C0FFFF0EFF
+
     7BB23FFFFFFFFFFECDB
+
     7BB24EE3BD1FFFF00AC
-    7BB25FF01FFAAAAAAAA
+
+    7BB25FF01FFAAAAAAAA'
 - expected_values:
-    KIA_HVAC_AAT: 5
-    KIA_HVAC_EVAPORATOR_T: 1
-    KIA_HVAC_HUMIDITY_SENSOR_FOR_AUTOMATIC_DEFOGGER: 58
-    KIA_HVAC_IAT: 18.5
-    KIA_HVAC_IAT_DRIVER_LEGS_VENT: 87.5
-    KIA_HVAC_IAT_DRIVER_VENT: 87.5
-    KIA_TEMP_EXT: 5
-    KIA_TEMP_INT: 18.5
-    KIA_VSS: 25
-  response: |-
-    7BB10256201007F901E
+    STINGER_TEMP_INT: 18.5
+    STINGER_TEMP_EXT: 5
+    STINGER_VSS: 25
+  response: '7BB10256201007F901E
+
     7BB2168FF755A5223C3
+
     7BB229724C3FFFF0FFF
+
     7BB23FFFFFFFFFF4C0F
+
     7BB242D3AD0FFFF19AC
-    7BB25FF01FFAAAAAAAA
+
+    7BB25FF01FFAAAAAAAA'
 - expected_values:
-    KIA_HVAC_AAT: 12.5
-    KIA_HVAC_EVAPORATOR_T: 4
-    KIA_HVAC_HUMIDITY_SENSOR_FOR_AUTOMATIC_DEFOGGER: 57
-    KIA_HVAC_IAT: 19
-    KIA_HVAC_IAT_DRIVER_LEGS_VENT: 87.5
-    KIA_HVAC_IAT_DRIVER_VENT: 87.5
-    KIA_TEMP_EXT: 12.5
-    KIA_TEMP_INT: 19
-    KIA_VSS: 106
-  response: |-
-    7BB10256201007F901E
+    STINGER_TEMP_INT: 19
+    STINGER_TEMP_EXT: 12.5
+    STINGER_VSS: 106
+  response: '7BB10256201007F901E
+
     7BB2168FF7669580378
+
     7BB22970378FFFF10FF
+
     7BB23FFFFFFFFFF4E0F
+
     7BB242D39D4FFFF6AC6
-    7BB25FF01FFAAAAAAAA
+
+    7BB25FF01FFAAAAAAAA'
 - expected_values:
-    KIA_HVAC_AAT: 7
-    KIA_HVAC_EVAPORATOR_T: 2
-    KIA_HVAC_HUMIDITY_SENSOR_FOR_AUTOMATIC_DEFOGGER: 69
-    KIA_HVAC_IAT: 22.5
-    KIA_HVAC_IAT_DRIVER_LEGS_VENT: 87.5
-    KIA_HVAC_IAT_DRIVER_VENT: 87.5
-    KIA_TEMP_EXT: 7
-    KIA_TEMP_INT: 22.5
-    KIA_VSS: 0
-  response: |-
-    7BB10256201007F901E
+    STINGER_TEMP_INT: 22.5
+    STINGER_TEMP_EXT: 7
+    STINGER_VSS: 0
+  response: '7BB10256201007F901E
+
     7BB2168FF7D5E54007D
+
     7BB22C2007DFFFF0FFF
+
     7BB23FFFFFFFFFF4D0F
+
     7BB242D45B6FFFF00CA
-    7BB25FF01FFAAAAAAAA
+
+    7BB25FF01FFAAAAAAAA'
 - expected_values:
-    KIA_HVAC_AAT: 32.5
-    KIA_HVAC_EVAPORATOR_T: 4
-    KIA_HVAC_HUMIDITY_SENSOR_FOR_AUTOMATIC_DEFOGGER: 34
-    KIA_HVAC_IAT: 23.5
-    KIA_HVAC_IAT_DRIVER_LEGS_VENT: 87.5
-    KIA_HVAC_IAT_DRIVER_VENT: 87.5
-    KIA_TEMP_EXT: 32.5
-    KIA_TEMP_INT: 23.5
-    KIA_VSS: 47
-  response: |-
-    7BB10256201007F901E
+    STINGER_TEMP_INT: 23.5
+    STINGER_TEMP_EXT: 32.5
+    STINGER_VSS: 47
+  response: '7BB10256201007F901E
+
     7BB2168FF7F91581E43
+
     7BB22101445FFFFF2FF
+
     7BB23FFFFFFFFFF4C0F
+
     7BB240C22EFFFFF2FC7
-    7BB25FF01FFAAAAAAAA
+
+    7BB25FF01FFAAAAAAAA'
 - expected_values:
-    KIA_HVAC_AAT: 32.5
-    KIA_HVAC_EVAPORATOR_T: 4.5
-    KIA_HVAC_HUMIDITY_SENSOR_FOR_AUTOMATIC_DEFOGGER: 33
-    KIA_HVAC_IAT: 23.5
-    KIA_HVAC_IAT_DRIVER_LEGS_VENT: 87.5
-    KIA_HVAC_IAT_DRIVER_VENT: 87.5
-    KIA_TEMP_EXT: 32.5
-    KIA_TEMP_INT: 23.5
-    KIA_VSS: 52
-  response: |-
-    7BB10256201007F901E
+    STINGER_TEMP_INT: 23.5
+    STINGER_TEMP_EXT: 32.5
+    STINGER_VSS: 52
+  response: '7BB10256201007F901E
+
     7BB2168FF7F91592043
+
     7BB22101545FFFFF2FF
+
     7BB23FFFFFFFFFF4C0F
+
     7BB240C21EFFFFF34CA
-    7BB25FF01FFAAAAAAAA
+
+    7BB25FF01FFAAAAAAAA'
 - expected_values:
-    KIA_HVAC_AAT: 32.5
-    KIA_HVAC_EVAPORATOR_T: 4.5
-    KIA_HVAC_HUMIDITY_SENSOR_FOR_AUTOMATIC_DEFOGGER: 31
-    KIA_HVAC_IAT: 23.5
-    KIA_HVAC_IAT_DRIVER_LEGS_VENT: 87.5
-    KIA_HVAC_IAT_DRIVER_VENT: 87.5
-    KIA_TEMP_EXT: 32.5
-    KIA_TEMP_INT: 23.5
-    KIA_VSS: 64
-  response: |-
-    7BB10256201007F901E
+    STINGER_TEMP_INT: 23.5
+    STINGER_TEMP_EXT: 32.5
+    STINGER_VSS: 64
+  response: '7BB10256201007F901E
+
     7BB2168FF7F91592343
+
     7BB22101545FFFFF2FF
+
     7BB23FFFFFFFFFF4C0F
+
     7BB240C1FEFFFFF40CA
-    7BB25FF01FFAAAAAAAA
+
+    7BB25FF01FFAAAAAAAA'
 - expected_values:
-    KIA_HVAC_AAT: 14.5
-    KIA_HVAC_EVAPORATOR_T: 7.5
-    KIA_HVAC_HUMIDITY_SENSOR_FOR_AUTOMATIC_DEFOGGER: 70
-    KIA_HVAC_IAT: 24
-    KIA_HVAC_IAT_DRIVER_LEGS_VENT: 87.5
-    KIA_HVAC_IAT_DRIVER_VENT: 87.5
-    KIA_TEMP_EXT: 14.5
-    KIA_TEMP_INT: 24
-    KIA_VSS: 17
-  response: |-
-    7BB10256201007F901E
+    STINGER_TEMP_INT: 24
+    STINGER_TEMP_EXT: 14.5
+    STINGER_VSS: 17
+  response: '7BB10256201007F901E
+
     7BB2168FF806D5F005D
+
     7BB226A0089FFFF11FF
+
     7BB23FFFFFFFFFF4C0F
+
     7BB242D46C5FFFF11BE
-    7BB25FF01FFAAAAAAAA
+
+    7BB25FF01FFAAAAAAAA'
 - expected_values:
-    KIA_HVAC_AAT: 12.5
-    KIA_HVAC_EVAPORATOR_T: 2
-    KIA_HVAC_HUMIDITY_SENSOR_FOR_AUTOMATIC_DEFOGGER: 68
-    KIA_HVAC_IAT: 24.5
-    KIA_HVAC_IAT_DRIVER_LEGS_VENT: 87.5
-    KIA_HVAC_IAT_DRIVER_VENT: 87.5
-    KIA_TEMP_EXT: 12.5
-    KIA_TEMP_INT: 24.5
-    KIA_VSS: 0
-  response: |-
-    7BB10256201007F901E
+    STINGER_TEMP_INT: 24.5
+    STINGER_TEMP_EXT: 12.5
+    STINGER_VSS: 0
+  response: '7BB10256201007F901E
+
     7BB2168FF816954004D
+
     7BB226A004EFFFF11FF
+
     7BB23FFFFFFFFFF4C0F
+
     7BB242D44F0FFFF00C0
-    7BB25FF01FFAAAAAAAA
+
+    7BB25FF01FFAAAAAAAA'
 - expected_values:
-    KIA_HVAC_AAT: 14.5
-    KIA_HVAC_EVAPORATOR_T: 3
-    KIA_HVAC_HUMIDITY_SENSOR_FOR_AUTOMATIC_DEFOGGER: 65
-    KIA_HVAC_IAT: 25.5
-    KIA_HVAC_IAT_DRIVER_LEGS_VENT: 87.5
-    KIA_HVAC_IAT_DRIVER_VENT: 87.5
-    KIA_TEMP_EXT: 14.5
-    KIA_TEMP_INT: 25.5
-    KIA_VSS: 35
-  response: |-
-    7BB10256201007F901E
+    STINGER_TEMP_INT: 25.5
+    STINGER_TEMP_EXT: 14.5
+    STINGER_VSS: 35
+  response: '7BB10256201007F901E
+
     7BB2168FF836D560048
+
     7BB226A003AFFFF11FF
+
     7BB23FFFFFFFFFF4C0F
+
     7BB242D41F0FFFF23C7
-    7BB25FF01FFAAAAAAAA
+
+    7BB25FF01FFAAAAAAAA'
