--- a/tests/test_cases/2023/command_support.yaml
+++ b/tests/test_cases/2023/command_support.yaml
@@ -1,20 +1,20 @@
 model_year: 2023
 supported_commands_by_ecu:
   "770":
-  - 770.778.22BC03:KIA_BELT_DRIV,KIA_BELT_DRIVER,KIA_BELT_PASS,KIA_BELT_PASSENGER,KIA_DEFOG_SW,KIA_DOOR_FL,KIA_DOOR_FR,KIA_DOOR_RL,KIA_DOOR_RR,KIA_HANDBRAKE,KIA_HOOD,KIA_LOW_BEAMS,KIA_TRUNK
-  - 770.778.22BC04:KIA_BELT_RL,KIA_BELT_RM,KIA_BELT_RR,KIA_GEAR_R,KIA_LOCK_FL,KIA_LOCK_FR,KIA_REVERSE_GEAR
-  - 770.778.22BC05:KIA_HAZARD_SW,KIA_HL_SW
+  - 770.778.22BC03:STINGER_DOOR_RL,STINGER_DOOR_FL,STINGER_HANDBRAKE,STINGER_DOOR_FR,STINGER_DOOR_RR,STINGER_TRUNK,STINGER_BELT_PASSENGER,STINGER_BELT_DRIVER,STINGER_BELT_PASS,STINGER_BELT_DRIV,STINGER_HOOD,STINGER_DEFOG_SW
+  - 770.778.22BC04:STINGER_LOCK_FR,STINGER_LOCK_FL,STINGER_REVERSE_GEAR,STINGER_BELT_RM,STINGER_BELT_RL,STINGER_BELT_RR
+  - 770.778.22BC05:STINGER_HAZARD_SW,STINGER_HL_SW
   - 770.778.22BC06:KIA_BRAKE_LIGHT
-  - 770.778.22BC07:KIA_DEFOG_LIGHT
-  - 770.778.22BC08:KIA_TURN_L,KIA_TURN_R
-  - 770.778.22BC09:KIA_HL_HIGH,KIA_HL_LOW
+  - 770.778.22BC07:STINGER_DEFOG_LIGHT
+  - 770.778.22BC08:STINGER_TURN_L
+  - 770.778.22BC09:STINGER_HL_HIGH,STINGER_HL_LOW
   "7A0":
-  - 7A0.7A8.22C00B|fc=1:KIA_FL_INVALID,KIA_FR_INVALID,KIA_RL_INVALID,KIA_RR_INVALID,KIA_TB_FL,KIA_TB_FR,KIA_TB_RL,KIA_TB_RR,KIA_TPMS_PRESS_RL,KIA_TPMS_PRESS_RR,KIA_TPMS_TEMP_FL,KIA_TPMS_TEMP_FR,KIA_TPMS_TEMP_RL,KIA_TPMS_TEMP_RR,KIA_TP_FL,KIA_TP_FL_PRE21,KIA_TP_FR,KIA_TP_FR_PRE21,KIA_TP_RL,KIA_TP_RL_PRE21,KIA_TP_RR,KIA_TP_RR_PRE21,KIA_TT_FL,KIA_TT_FL_PRE21,KIA_TT_FR,KIA_TT_FR_PRE21,KIA_TT_RL,KIA_TT_RL_PRE21,KIA_TT_RR,KIA_TT_RR_PRE21,KIA_TW_FL,KIA_TW_FR,KIA_TW_RL,KIA_TW_RR
+  - 7A0.7A8.22C00B|fc=1:STINGER_TP_FL,STINGER_TT_FL,STINGER_TP_FR,STINGER_TT_FR,STINGER_TP_RR,STINGER_TT_RR,STINGER_TP_RL,STINGER_TT_RL,STINGER_TB_FL,STINGER_TW_FL,STINGER_TB_FR,STINGER_TW_FR,STINGER_TB_RL,STINGER_TW_RL,STINGER_TB_RR,STINGER_TW_RR
   "7B3":
-  - 7B3.7BB.220100|fc=1:KIA_HVAC_AAT,KIA_HVAC_EVAPORATOR_T,KIA_HVAC_HUMIDITY_SENSOR_FOR_AUTOMATIC_DEFOGGER,KIA_HVAC_IAT,KIA_HVAC_IAT_DRIVER_LEGS_VENT,KIA_HVAC_IAT_DRIVER_VENT,KIA_TEMP_EXT,KIA_TEMP_INT,KIA_VSS
+  - 7B3.7BB.220100|fc=1:STINGER_TEMP_INT,STINGER_TEMP_EXT,STINGER_VSS
   - 7B3.7BB.220101:KIA_HVAC_IAT_PASSENGER_LEGS_VENT,KIA_HVAC_IAT_PASSENGER_VENT
   "7C6":
-  - 7C6.7CE.22B002|fc=1:KIA_CLUSTER_VOLTAGE,KIA_FLI_VOL,KIA_FLI_VOL_THIRDGEN,KIA_ODO_KM,KIA_ODO_MI,KIA_VPWR
+  - 7C6.7CE.22B002|fc=1:STINGER_FLI_VOL,STINGER_CLUSTER_VOLTAGE,STINGER_ODO_KM,STINGER_ODO_MI
   "7D4":
   - 7D4.7DC.220101:KIA_BMS_CHG_PWR,KIA_BMS_DISCHG_PWR,KIA_BMS_MIN_TEMP,KIA_BMS_MOD1_TEMP,KIA_BMS_MOD2_TEMP,KIA_BMS_MOD3_TEMP,KIA_BMS_MOD4_TEMP,KIA_BMS_SOC,KIA_MDPS_MOTOR_CURRENT,KIA_WHEEL_ANGLE_ABS
   "7E0":
@@ -63,7 +63,7 @@ supported_commands_by_ecu:
   - 7E0.7E8.22E004:KIA_22E004,KIA_AUX_SOC,KIA_AUX_SOH
   - 7E0.7E8.22E00A:KIA_KNOCK_LEARN_1,KIA_KNOCK_LEARN_2,KIA_KNOCK_LEARN_3,KIA_KNOCK_LEARN_4,KIA_KNOCK_RETARD_1,KIA_KNOCK_RETARD_2,KIA_KNOCK_RETARD_3,KIA_KNOCK_RETARD_4
   - 7E0.7E8.22E019:KIA_KNOCK_RETARD_1_E019,KIA_KNOCK_RETARD_2_E019,KIA_KNOCK_RETARD_3_E019,KIA_KNOCK_RETARD_4_E019
-  - 7E0.7E8.22E021:KIA_TB_PRES,KIA_TURBO_BOOST,KIA_WG_DUTY,KIA_WG_POS,KIA_WG_POSITION,KIA_WG_SETPOINT,KIA_WG_SP,KIA_WG_V,KIA_WG_VOLTAGE
+  - 7E0.7E8.22E021:STINGER_TURBO_BOOST,STINGER_WG_VOLTAGE,STINGER_WG_DUTY,STINGER_WG_POSITION,STINGER_WG_SETPOINT
   "7E1":
   - 7E1.7E9.0105
   - 7E1.7E9.2201A0:KIA_ATF_T_V2,KIA_BRAKE_PEDAL_V2,KIA_COMMANDED_GEAR_V2,KIA_CURRENT_GEAR_V2,KIA_GEAR_V2,KIA_OUTPUT_SPEED_V2,KIA_REL_APP,KIA_RPM_V2,KIA_TORQUE_CONVERTER_SLIP_V2,KIA_TURBINE_SPEED_V2,KIA_VSS_7E1
