--- a/tests/test_cases/2023/commands/7A0.7A8.22C00B|fc=1.yaml
+++ b/tests/test_cases/2023/commands/7A0.7A8.22C00B|fc=1.yaml
@@ -1,557 +1,392 @@
 command_id: 7A0.7A8.22C00B|fc=1
 test_cases:
 - expected_values:
-    KIA_FL_INVALID: 1
-    KIA_FR_INVALID: 1
-    KIA_RL_INVALID: 1
-    KIA_RR_INVALID: 1
-    KIA_TB_FL: 3V+
-    KIA_TB_FR: 2_4_2_7V
-    KIA_TB_RR: 3V+
-    KIA_TPMS_PRESS_RL: 0.4
-    KIA_TPMS_PRESS_RR: 0
-    KIA_TPMS_TEMP_FL: 0
-    KIA_TPMS_TEMP_FR: 0
-    KIA_TPMS_TEMP_RL: -5
-    KIA_TPMS_TEMP_RR: 2
-    KIA_TP_FL: 0
-    KIA_TP_FR: 0
-    KIA_TP_FR_PRE21: 0
-    KIA_TP_RL: 0
-    KIA_TP_RR: 0.4
-    KIA_TT_FL: -50
-    KIA_TT_FR: -50
-    KIA_TT_RL: -48
-    KIA_TT_RR: 201
-    KIA_TT_RR_PRE21: -50
-    KIA_TW_FL: 1
-    KIA_TW_FR: 0
-    KIA_TW_RL: 1
-    KIA_TW_RR: 0
-  response: |-
-    7A8102062C00BFFFFFF
+    STINGER_TP_FL: 0
+    STINGER_TT_FL: -50
+    STINGER_TP_FR: 0
+    STINGER_TT_FR: -50
+    STINGER_TP_RR: 0
+    STINGER_TT_RR: -50
+    STINGER_TP_RL: 0
+    STINGER_TT_RL: -50
+    STINGER_TB_FL: 3V+
+    STINGER_TW_FL: NO_DATA_YET
+    STINGER_TB_FR: 3V+
+    STINGER_TW_FR: NO_DATA_YET
+    STINGER_TB_RL: 3V+
+    STINGER_TW_RL: NO_DATA_YET
+    STINGER_TB_RR: 3V+
+    STINGER_TW_RR: NO_DATA_YET
+  response: '7A8102062C00BFFFFFF
+
     7A82180000000020000
+
     7A82200020000000200
+
     7A823000002FB87AF87
-    7A824AF92BE92BEAAAA
+
+    7A824AF92BE92BEAAAA'
 - expected_values:
-    KIA_FL_INVALID: 1
-    KIA_FR_INVALID: 1
-    KIA_RL_INVALID: 0
-    KIA_RR_INVALID: 1
-    KIA_TB_FL: 3V+
-    KIA_TB_FR: 2_4_2_7V
-    KIA_TB_RR: 3V+
-    KIA_TPMS_PRESS_RL: 0.4
-    KIA_TPMS_PRESS_RR: 0.2
-    KIA_TPMS_TEMP_FL: 0
-    KIA_TPMS_TEMP_FR: 0
-    KIA_TPMS_TEMP_RL: -5
-    KIA_TPMS_TEMP_RR: 0
-    KIA_TP_FL: 0
-    KIA_TP_FR: 0
-    KIA_TP_FR_PRE21: 0
-    KIA_TP_RL: 0.2
-    KIA_TP_RR: 0.4
-    KIA_TP_RR_PRE21: 35.6
-    KIA_TT_FL: -50
-    KIA_TT_FR: -50
-    KIA_TT_RL: -50
-    KIA_TT_RR: 201
-    KIA_TT_RR_PRE21: 0
-    KIA_TW_FL: 1
-    KIA_TW_FR: 1
-    KIA_TW_RL: 1
-    KIA_TW_RR: 0
-  response: |-
-    7A8102062C00BFFFFFF
+    STINGER_TP_FL: 0
+    STINGER_TT_FL: -50
+    STINGER_TP_FR: 0
+    STINGER_TT_FR: -50
+    STINGER_TP_RR: 35.6
+    STINGER_TT_RR: 0.0
+    STINGER_TP_RL: 0
+    STINGER_TT_RL: -50
+    STINGER_TB_FL: 3V+
+    STINGER_TW_FL: NO_DATA_YET
+    STINGER_TB_FR: 3V+
+    STINGER_TW_FR: NO_DATA_YET
+    STINGER_TB_RL: 2.7-_3V
+    STINGER_TW_RL: VALID
+    STINGER_TB_RR: 3V+
+    STINGER_TW_RR: NO_DATA_YET
+  response: '7A8102062C00BFFFFFF
+
     7A82180000000020000
+
     7A8220002B232010000
+
     7A823000002FB87AF87
-    7A824AF92BE92BEAAAA
+
+    7A824AF92BE92BEAAAA'
 - expected_values:
-    KIA_FL_INVALID: 1
-    KIA_FR_INVALID: 0
-    KIA_RL_INVALID: 0
-    KIA_RR_INVALID: 0
-    KIA_TB_FL: 3V+
-    KIA_TB_FR: 3V+
-    KIA_TPMS_PRESS_RL: 0
-    KIA_TPMS_PRESS_RR: 0.8
-    KIA_TPMS_TEMP_FL: 0
-    KIA_TPMS_TEMP_FR: 4
-    KIA_TPMS_TEMP_RL: -5
-    KIA_TPMS_TEMP_RR: 0
-    KIA_TP_FL: 0
-    KIA_TP_FR: 11
-    KIA_TP_FR_PRE21: 34
-    KIA_TP_RL: 0.8
-    KIA_TP_RL_PRE21: 32.2
-    KIA_TP_RR: 0
-    KIA_TP_RR_PRE21: 35.8
-    KIA_TT_FL: -50
-    KIA_TT_FR: -46
-    KIA_TT_FR_PRE21: 5
-    KIA_TT_RL: -50
-    KIA_TT_RL_PRE21: -3
-    KIA_TT_RR: 201
-    KIA_TT_RR_PRE21: 0
-    KIA_TW_FL: 1
-    KIA_TW_FR: 1
-    KIA_TW_RL: 1
-    KIA_TW_RR: 1
-  response: |-
-    7A8102062C00BFFFFFF
+    STINGER_TP_FL: 0
+    STINGER_TT_FL: -50
+    STINGER_TP_FR: 34.0
+    STINGER_TT_FR: 5.0
+    STINGER_TP_RR: 35.8
+    STINGER_TT_RR: 0.0
+    STINGER_TP_RL: 32.2
+    STINGER_TT_RL: -3.0
+    STINGER_TB_FL: 3V+
+    STINGER_TW_FL: NO_DATA_YET
+    STINGER_TB_FR: null
+    STINGER_TW_FR: VALID
+    STINGER_TB_RL: null
+    STINGER_TW_RL: VALID
+    STINGER_TB_RR: null
+    STINGER_TW_RR: VALID
+  response: '7A8102062C00BFFFFFF
+
     7A8218000000002AA37
+
     7A8220400B3320400A1
+
     7A8232F0500FB87AF87
-    7A824AF92BE92BEAAAA
+
+    7A824AF92BE92BEAAAA'
 - expected_values:
-    KIA_FL_INVALID: 1
-    KIA_FR_INVALID: 0
-    KIA_RL_INVALID: 1
-    KIA_RR_INVALID: 1
-    KIA_TB_FL: 3V+
-    KIA_TB_FR: 3V+
-    KIA_TB_RR: 3V+
-    KIA_TPMS_PRESS_RL: 0.4
-    KIA_TPMS_PRESS_RR: 0
-    KIA_TPMS_TEMP_FL: 0
-    KIA_TPMS_TEMP_FR: 4
-    KIA_TPMS_TEMP_RL: -5
-    KIA_TPMS_TEMP_RR: 2
-    KIA_TP_FL: 0
-    KIA_TP_FR: 17.4
-    KIA_TP_FR_PRE21: 36.6
-    KIA_TP_RL: 0
-    KIA_TP_RR: 0.4
-    KIA_TT_FL: -50
-    KIA_TT_FR: -46
-    KIA_TT_FR_PRE21: 37
-    KIA_TT_RL: -48
-    KIA_TT_RR: 201
-    KIA_TT_RR_PRE21: -50
-    KIA_TW_FL: 1
-    KIA_TW_FR: 0
-    KIA_TW_RL: 1
-    KIA_TW_RR: 0
-  response: |-
-    7A8102062C00BFFFFFF
+    STINGER_TP_FL: 0
+    STINGER_TT_FL: -50
+    STINGER_TP_FR: 36.6
+    STINGER_TT_FR: 37.0
+    STINGER_TP_RR: 0
+    STINGER_TT_RR: -50
+    STINGER_TP_RL: 0
+    STINGER_TT_RL: -50
+    STINGER_TB_FL: 3V+
+    STINGER_TW_FL: NO_DATA_YET
+    STINGER_TB_FR: null
+    STINGER_TW_FR: VALID
+    STINGER_TB_RL: 3V+
+    STINGER_TW_RL: NO_DATA_YET
+    STINGER_TB_RR: 3V+
+    STINGER_TW_RR: NO_DATA_YET
+  response: '7A8102062C00BFFFFFF
+
     7A8218000000002B757
+
     7A82204000000000200
+
     7A823000002FB87AF87
-    7A824AF92BE92BEAAAA
+
+    7A824AF92BE92BEAAAA'
 - expected_values:
-    KIA_FL_INVALID: 1
-    KIA_FR_INVALID: 0
-    KIA_RL_INVALID: 1
-    KIA_RR_INVALID: 0
-    KIA_TB_FL: 3V+
-    KIA_TB_FR: 3V+
-    KIA_TPMS_PRESS_RL: 0
-    KIA_TPMS_PRESS_RR: 0
-    KIA_TPMS_TEMP_FL: 0
-    KIA_TPMS_TEMP_FR: 4
-    KIA_TPMS_TEMP_RL: -5
-    KIA_TPMS_TEMP_RR: 2
-    KIA_TP_FL: 0
-    KIA_TP_FR: 17
-    KIA_TP_FR_PRE21: 37.6
-    KIA_TP_RL: 0
-    KIA_TP_RL_PRE21: 37
-    KIA_TP_RR: 0
-    KIA_TT_FL: -50
-    KIA_TT_FR: -46
-    KIA_TT_FR_PRE21: 35
-    KIA_TT_RL: -48
-    KIA_TT_RL_PRE21: 34
-    KIA_TT_RR: 201
-    KIA_TT_RR_PRE21: -50
-    KIA_TW_FL: 1
-    KIA_TW_FR: 0
-    KIA_TW_RL: 1
-    KIA_TW_RR: 1
-  response: |-
-    7A8102062C00BFFFFFF
+    STINGER_TP_FL: 0
+    STINGER_TT_FL: -50
+    STINGER_TP_FR: 37.6
+    STINGER_TT_FR: 35.0
+    STINGER_TP_RR: 0
+    STINGER_TT_RR: -50
+    STINGER_TP_RL: 37.0
+    STINGER_TT_RL: 34.0
+    STINGER_TB_FL: 3V+
+    STINGER_TW_FL: NO_DATA_YET
+    STINGER_TB_FR: null
+    STINGER_TW_FR: VALID
+    STINGER_TB_RL: 3V+
+    STINGER_TW_RL: NO_DATA_YET
+    STINGER_TB_RR: null
+    STINGER_TW_RR: VALID
+  response: '7A8102062C00BFFFFFF
+
     7A8218000000002BC55
+
     7A822040000000002B9
+
     7A823540400FB87AF87
-    7A824AF92BE92BEAAAA
+
+    7A824AF92BE92BEAAAA'
 - expected_values:
-    KIA_FL_INVALID: 0
-    KIA_FR_INVALID: 1
-    KIA_RL_INVALID: 1
-    KIA_RR_INVALID: 1
-    KIA_TB_FR: 2_4_2_7V
-    KIA_TB_RR: 3V+
-    KIA_TPMS_PRESS_RL: 0.4
-    KIA_TPMS_PRESS_RR: 0
-    KIA_TPMS_TEMP_FL: 32
-    KIA_TPMS_TEMP_FR: 0
-    KIA_TPMS_TEMP_RL: -5
-    KIA_TPMS_TEMP_RR: 2
-    KIA_TP_FL: 29.2
-    KIA_TP_FL_PRE21: 29.2
-    KIA_TP_FR: 0
-    KIA_TP_FR_PRE21: 0
-    KIA_TP_RL: 0
-    KIA_TP_RR: 0.4
-    KIA_TT_FL: -18
-    KIA_TT_FL_PRE21: -18
-    KIA_TT_FR: -50
-    KIA_TT_RL: -48
-    KIA_TT_RR: 201
-    KIA_TT_RR_PRE21: -50
-    KIA_TW_FL: 0
-    KIA_TW_FR: 0
-    KIA_TW_RL: 1
-    KIA_TW_RR: 0
-  response: |-
-    7A8102062C00BFFFFFF
+    STINGER_TP_FL: 29.2
+    STINGER_TT_FL: -18.0
+    STINGER_TP_FR: 0
+    STINGER_TT_FR: -50
+    STINGER_TP_RR: 0
+    STINGER_TT_RR: -50
+    STINGER_TP_RL: 0
+    STINGER_TT_RL: -50
+    STINGER_TB_FL: null
+    STINGER_TW_FL: VALID
+    STINGER_TB_FR: 3V+
+    STINGER_TW_FR: NO_DATA_YET
+    STINGER_TB_RL: 3V+
+    STINGER_TW_RL: NO_DATA_YET
+    STINGER_TB_RR: 3V+
+    STINGER_TW_RR: NO_DATA_YET
+  response: '7A8102062C00BFFFFFF
+
     7A82180922005000000
+
     7A82200020000000200
+
     7A823000002FB87AF87
-    7A824AF92BE92BEAAAA
+
+    7A824AF92BE92BEAAAA'
 - expected_values:
-    KIA_FL_INVALID: 0
-    KIA_FR_INVALID: 0
-    KIA_RL_INVALID: 0
-    KIA_RR_INVALID: 0
-    KIA_TB_FR: 3V+
-    KIA_TPMS_PRESS_RL: 0
-    KIA_TPMS_PRESS_RR: 0.8
-    KIA_TPMS_TEMP_FL: 31
-    KIA_TPMS_TEMP_FR: 4
-    KIA_TPMS_TEMP_RL: -5
-    KIA_TPMS_TEMP_RR: 0
-    KIA_TP_FL: 29.8
-    KIA_TP_FL_PRE21: 29.8
-    KIA_TP_FR: 6.8
-    KIA_TP_FR_PRE21: 31.6
-    KIA_TP_RL: 0.8
-    KIA_TP_RL_PRE21: 30.2
-    KIA_TP_RR: 0
-    KIA_TP_RR_PRE21: 33.6
-    KIA_TT_FL: -19
-    KIA_TT_FL_PRE21: -19
-    KIA_TT_FR: -46
-    KIA_TT_FR_PRE21: -16
-    KIA_TT_RL: -50
-    KIA_TT_RL_PRE21: -20
-    KIA_TT_RR: 201
-    KIA_TT_RR_PRE21: -17
-    KIA_TW_FL: 0
-    KIA_TW_FR: 1
-    KIA_TW_RL: 1
-    KIA_TW_RR: 1
-  response: |-
-    7A8102062C00BFFFFFF
+    STINGER_TP_FL: 29.8
+    STINGER_TT_FL: -19.0
+    STINGER_TP_FR: 31.6
+    STINGER_TT_FR: -16.0
+    STINGER_TP_RR: 33.6
+    STINGER_TT_RR: -17.0
+    STINGER_TP_RL: 30.2
+    STINGER_TT_RL: -20.0
+    STINGER_TB_FL: null
+    STINGER_TW_FL: VALID
+    STINGER_TB_FR: null
+    STINGER_TW_FR: VALID
+    STINGER_TB_RL: null
+    STINGER_TW_RL: VALID
+    STINGER_TB_RR: null
+    STINGER_TW_RR: VALID
+  response: '7A8102062C00BFFFFFF
+
     7A82180951F04009E22
+
     7A8220400A821040097
+
     7A8231E0400FB87AF87
-    7A824AF92BE92BEAAAA
+
+    7A824AF92BE92BEAAAA'
 - expected_values:
-    KIA_FL_INVALID: 0
-    KIA_FR_INVALID: 0
-    KIA_RL_INVALID: 0
-    KIA_RR_INVALID: 0
-    KIA_TB_FR: 3V+
-    KIA_TPMS_PRESS_RL: 0
-    KIA_TPMS_PRESS_RR: 0.8
-    KIA_TPMS_TEMP_FL: 38
-    KIA_TPMS_TEMP_FR: 4
-    KIA_TPMS_TEMP_RL: -5
-    KIA_TPMS_TEMP_RR: 0
-    KIA_TP_FL: 30.6
-    KIA_TP_FL_PRE21: 30.6
-    KIA_TP_FR: 9.4
-    KIA_TP_FR_PRE21: 32.8
-    KIA_TP_RL: 0.8
-    KIA_TP_RL_PRE21: 31
-    KIA_TP_RR: 0
-    KIA_TP_RR_PRE21: 34.6
-    KIA_TT_FL: -12
-    KIA_TT_FL_PRE21: -12
-    KIA_TT_FR: -46
-    KIA_TT_FR_PRE21: -3
-    KIA_TT_RL: -50
-    KIA_TT_RL_PRE21: -13
-    KIA_TT_RR: 201
-    KIA_TT_RR_PRE21: -8
-    KIA_TW_FL: 0
-    KIA_TW_FR: 1
-    KIA_TW_RL: 1
-    KIA_TW_RR: 1
-  response: |-
-    7A8102062C00BFFFFFF
+    STINGER_TP_FL: 30.6
+    STINGER_TT_FL: -12.0
+    STINGER_TP_FR: 32.8
+    STINGER_TT_FR: -3.0
+    STINGER_TP_RR: 34.6
+    STINGER_TT_RR: -8.0
+    STINGER_TP_RL: 31.0
+    STINGER_TT_RL: -13.0
+    STINGER_TB_FL: null
+    STINGER_TW_FL: VALID
+    STINGER_TB_FR: null
+    STINGER_TW_FR: VALID
+    STINGER_TB_RL: null
+    STINGER_TW_RL: VALID
+    STINGER_TB_RR: null
+    STINGER_TW_RR: VALID
+  response: '7A8102062C00BFFFFFF
+
     7A8218099260400A42F
+
     7A8220400AD2A04009B
+
     7A823250400FB87AF87
-    7A824AF92BE92BEAAAA
+
+    7A824AF92BE92BEAAAA'
 - expected_values:
-    KIA_FL_INVALID: 0
-    KIA_FR_INVALID: 0
-    KIA_RL_INVALID: 0
-    KIA_RR_INVALID: 0
-    KIA_TB_FR: 3V+
-    KIA_TPMS_PRESS_RL: 0
-    KIA_TPMS_PRESS_RR: 1.2
-    KIA_TPMS_TEMP_FL: 46
-    KIA_TPMS_TEMP_FR: 6
-    KIA_TPMS_TEMP_RL: -5
-    KIA_TPMS_TEMP_RR: 0
-    KIA_TP_FL: 32
-    KIA_TP_FL_PRE21: 32
-    KIA_TP_FR: 8.8
-    KIA_TP_FR_PRE21: 33
-    KIA_TP_RL: 1.2
-    KIA_TP_RL_PRE21: 32.8
-    KIA_TP_RR: 0
-    KIA_TP_RR_PRE21: 35.4
-    KIA_TT_FL: -4
-    KIA_TT_FL_PRE21: -4
-    KIA_TT_FR: -44
-    KIA_TT_FR_PRE21: -6
-    KIA_TT_RL: -50
-    KIA_TT_RL_PRE21: -3
-    KIA_TT_RR: 201
-    KIA_TT_RR_PRE21: -8
-    KIA_TW_FL: 0
-    KIA_TW_FR: 1
-    KIA_TW_RL: 1
-    KIA_TW_RR: 1
-  response: |-
-    7A8102062C00BFFFFFF
+    STINGER_TP_FL: 32.0
+    STINGER_TT_FL: -4.0
+    STINGER_TP_FR: 33.0
+    STINGER_TT_FR: -6.0
+    STINGER_TP_RR: 35.4
+    STINGER_TT_RR: -8.0
+    STINGER_TP_RL: 32.8
+    STINGER_TT_RL: -3.0
+    STINGER_TB_FL: null
+    STINGER_TW_FL: VALID
+    STINGER_TB_FR: null
+    STINGER_TW_FR: VALID
+    STINGER_TB_RL: null
+    STINGER_TW_RL: VALID
+    STINGER_TB_RR: null
+    STINGER_TW_RR: VALID
+  response: '7A8102062C00BFFFFFF
+
     7A82180A02E0600A52C
+
     7A8220600B12A0600A4
+
     7A8232F0600FB87AF87
-    7A824AF92BE92BEAAAA
+
+    7A824AF92BE92BEAAAA'
 - expected_values:
-    KIA_FL_INVALID: 0
-    KIA_FR_INVALID: 0
-    KIA_RL_INVALID: 0
-    KIA_RR_INVALID: 0
-    KIA_TB_FR: 3V+
-    KIA_TPMS_PRESS_RL: 0
-    KIA_TPMS_PRESS_RR: 0.8
-    KIA_TPMS_TEMP_FL: 80
-    KIA_TPMS_TEMP_FR: 4
-    KIA_TPMS_TEMP_RL: -5
-    KIA_TPMS_TEMP_RR: 0
-    KIA_TP_FL: 35
-    KIA_TP_FL_PRE21: 35
-    KIA_TP_FR: 16
-    KIA_TP_FR_PRE21: 36
-    KIA_TP_RL: 0.8
-    KIA_TP_RL_PRE21: 35.4
-    KIA_TP_RR: 0
-    KIA_TP_RR_PRE21: 36
-    KIA_TT_FL: 30
-    KIA_TT_FL_PRE21: 30
-    KIA_TT_FR: -46
-    KIA_TT_FR_PRE21: 30
-    KIA_TT_RL: -50
-    KIA_TT_RL_PRE21: 30
-    KIA_TT_RR: 201
-    KIA_TT_RR_PRE21: 30
-    KIA_TW_FL: 0
-    KIA_TW_FR: 1
-    KIA_TW_RL: 1
-    KIA_TW_RR: 1
-  response: |-
-    7A8102062C00BFFFFFF
+    STINGER_TP_FL: 35.0
+    STINGER_TT_FL: 30.0
+    STINGER_TP_FR: 36.0
+    STINGER_TT_FR: 30.0
+    STINGER_TP_RR: 36.0
+    STINGER_TT_RR: 30.0
+    STINGER_TP_RL: 35.4
+    STINGER_TT_RL: 30.0
+    STINGER_TB_FL: null
+    STINGER_TW_FL: VALID
+    STINGER_TB_FR: null
+    STINGER_TW_FR: VALID
+    STINGER_TB_RL: null
+    STINGER_TW_RL: VALID
+    STINGER_TB_RR: null
+    STINGER_TW_RR: VALID
+  response: '7A8102062C00BFFFFFF
+
     7A82180AF500400B450
+
     7A8220400B4500400B1
+
     7A823500400FB87AF87
-    7A824AF92BE92BEAAAA
+
+    7A824AF92BE92BEAAAA'
 - expected_values:
-    KIA_FL_INVALID: 0
-    KIA_FR_INVALID: 0
-    KIA_RL_INVALID: 0
-    KIA_RR_INVALID: 0
-    KIA_TB_FR: 3V+
-    KIA_TPMS_PRESS_RL: 0
-    KIA_TPMS_PRESS_RR: 0.8
-    KIA_TPMS_TEMP_FL: 91
-    KIA_TPMS_TEMP_FR: 4
-    KIA_TPMS_TEMP_RL: -5
-    KIA_TPMS_TEMP_RR: 0
-    KIA_TP_FL: 36.8
-    KIA_TP_FL_PRE21: 36.8
-    KIA_TP_FR: 18.8
-    KIA_TP_FR_PRE21: 38
-    KIA_TP_RL: 0.8
-    KIA_TP_RL_PRE21: 37
-    KIA_TP_RR: 0
-    KIA_TP_RR_PRE21: 38
-    KIA_TT_FL: 41
-    KIA_TT_FL_PRE21: 41
-    KIA_TT_FR: -46
-    KIA_TT_FR_PRE21: 44
-    KIA_TT_RL: -50
-    KIA_TT_RL_PRE21: 38
-    KIA_TT_RR: 201
-    KIA_TT_RR_PRE21: 41
-    KIA_TW_FL: 0
-    KIA_TW_FR: 1
-    KIA_TW_RL: 1
-    KIA_TW_RR: 1
-  response: |-
-    7A8102062C00BFFFFFF
+    STINGER_TP_FL: 36.8
+    STINGER_TT_FL: 41.0
+    STINGER_TP_FR: 38.0
+    STINGER_TT_FR: 44.0
+    STINGER_TP_RR: 38.0
+    STINGER_TT_RR: 41.0
+    STINGER_TP_RL: 37.0
+    STINGER_TT_RL: 38.0
+    STINGER_TB_FL: null
+    STINGER_TW_FL: VALID
+    STINGER_TB_FR: null
+    STINGER_TW_FR: VALID
+    STINGER_TB_RL: null
+    STINGER_TW_RL: VALID
+    STINGER_TB_RR: null
+    STINGER_TW_RR: VALID
+  response: '7A8102062C00BFFFFFF
+
     7A82180B85B0400BE5E
+
     7A8220400BE5B0400B9
+
     7A823580400FB87AF87
-    7A824AF92BE92BEAAAA
+
+    7A824AF92BE92BEAAAA'
 - expected_values:
-    KIA_FL_INVALID: 0
-    KIA_FR_INVALID: 0
-    KIA_RL_INVALID: 0
-    KIA_RR_INVALID: 0
-    KIA_TB_FL: 3V+
-    KIA_TB_FR: 3V+
-    KIA_TPMS_PRESS_RL: 0
-    KIA_TPMS_PRESS_RR: 0
-    KIA_TPMS_TEMP_FL: 50
-    KIA_TPMS_TEMP_FR: 4
-    KIA_TPMS_TEMP_RL: -5
-    KIA_TPMS_TEMP_RR: 0
-    KIA_TP_FL: 38.4
-    KIA_TP_FL_PRE21: 38.4
-    KIA_TP_FR: 16
-    KIA_TP_FR_PRE21: 39.4
-    KIA_TP_RL: 0
-    KIA_TP_RL_PRE21: 39
-    KIA_TP_RR: 0
-    KIA_TP_RR_PRE21: 39.6
-    KIA_TT_FL: 0
-    KIA_TT_FL_PRE21: 0
-    KIA_TT_FR: -46
-    KIA_TT_FR_PRE21: 30
-    KIA_TT_RL: -50
-    KIA_TT_RL_PRE21: 28
-    KIA_TT_RR: 201
-    KIA_TT_RR_PRE21: 0
-    KIA_TW_FL: 0
-    KIA_TW_FR: 1
-    KIA_TW_RL: 1
-    KIA_TW_RR: 1
-  response: |-
-    7A8102062C00BFFFFFF
+    STINGER_TP_FL: 38.4
+    STINGER_TT_FL: 0.0
+    STINGER_TP_FR: 39.4
+    STINGER_TT_FR: 30.0
+    STINGER_TP_RR: 39.6
+    STINGER_TT_RR: 0.0
+    STINGER_TP_RL: 39.0
+    STINGER_TT_RL: 28.0
+    STINGER_TB_FL: 3V+
+    STINGER_TW_FL: VALID
+    STINGER_TB_FR: null
+    STINGER_TW_FR: VALID
+    STINGER_TB_RL: 3V+
+    STINGER_TW_RL: VALID
+    STINGER_TB_RR: null
+    STINGER_TW_RR: VALID
+  response: '7A8102062C00BFFFFFF
+
     7A82180C0320000C550
+
     7A8220400C6320000C3
+
     7A8234E0400FB87AF87
-    7A824AF92BE92BEAAAA
+
+    7A824AF92BE92BEAAAA'
 - expected_values:
-    KIA_FL_INVALID: 0
-    KIA_FR_INVALID: 0
-    KIA_RL_INVALID: 0
-    KIA_RR_INVALID: 0
-    KIA_TB_FR: 3V+
-    KIA_TPMS_PRESS_RL: 0
-    KIA_TPMS_PRESS_RR: 1.2
-    KIA_TPMS_TEMP_FL: 87
-    KIA_TPMS_TEMP_FR: 6
-    KIA_TPMS_TEMP_RL: -5
-    KIA_TPMS_TEMP_RR: 0
-    KIA_TP_FL: 40
-    KIA_TP_FL_PRE21: 40
-    KIA_TP_FR: 17
-    KIA_TP_FR_PRE21: 40.6
-    KIA_TP_RL: 1.2
-    KIA_TP_RL_PRE21: 41.8
-    KIA_TP_RR: 0
-    KIA_TP_RR_PRE21: 42.6
-    KIA_TT_FL: 37
-    KIA_TT_FL_PRE21: 37
-    KIA_TT_FR: -44
-    KIA_TT_FR_PRE21: 35
-    KIA_TT_RL: -50
-    KIA_TT_RL_PRE21: 41
-    KIA_TT_RR: 201
-    KIA_TT_RR_PRE21: 40
-    KIA_TW_FL: 0
-    KIA_TW_FR: 1
-    KIA_TW_RL: 1
-    KIA_TW_RR: 1
-  response: |-
-    7A8102062C00BFFFFFF
+    STINGER_TP_FL: 40.0
+    STINGER_TT_FL: 37.0
+    STINGER_TP_FR: 40.6
+    STINGER_TT_FR: 35.0
+    STINGER_TP_RR: 42.6
+    STINGER_TT_RR: 40.0
+    STINGER_TP_RL: 41.8
+    STINGER_TT_RL: 41.0
+    STINGER_TB_FL: null
+    STINGER_TW_FL: VALID
+    STINGER_TB_FR: null
+    STINGER_TW_FR: VALID
+    STINGER_TB_RL: null
+    STINGER_TW_RL: VALID
+    STINGER_TB_RR: null
+    STINGER_TW_RR: VALID
+  response: '7A8102062C00BFFFFFF
+
     7A82180C8570600CB55
+
     7A8220600D55A0600D1
+
     7A8235B0600FB87AF87
-    7A824AF92BE92BEAAAA
+
+    7A824AF92BE92BEAAAA'
 - expected_values:
-    KIA_FL_INVALID: 0
-    KIA_FR_INVALID: 0
-    KIA_RL_INVALID: 0
-    KIA_RR_INVALID: 0
-    KIA_TB_FR: 3V+
-    KIA_TPMS_PRESS_RL: 0
-    KIA_TPMS_PRESS_RR: 1.2
-    KIA_TPMS_TEMP_FL: 87
-    KIA_TPMS_TEMP_FR: 6
-    KIA_TPMS_TEMP_RL: -5
-    KIA_TPMS_TEMP_RR: 0
-    KIA_TP_FL: 40
-    KIA_TP_FL_PRE21: 40
-    KIA_TP_FR: 17
-    KIA_TP_FR_PRE21: 40.8
-    KIA_TP_RL: 1.2
-    KIA_TP_RL_PRE21: 42.4
-    KIA_TP_RR: 0
-    KIA_TP_RR_PRE21: 42
-    KIA_TT_FL: 37
-    KIA_TT_FL_PRE21: 37
-    KIA_TT_FR: -44
-    KIA_TT_FR_PRE21: 35
-    KIA_TT_RL: -50
-    KIA_TT_RL_PRE21: 41
-    KIA_TT_RR: 201
-    KIA_TT_RR_PRE21: 39
-    KIA_TW_FL: 0
-    KIA_TW_FR: 1
-    KIA_TW_RL: 1
-    KIA_TW_RR: 1
-  response: |-
-    7A8102062C00BFFFFFF
+    STINGER_TP_FL: 40.0
+    STINGER_TT_FL: 37.0
+    STINGER_TP_FR: 40.8
+    STINGER_TT_FR: 35.0
+    STINGER_TP_RR: 42.0
+    STINGER_TT_RR: 39.0
+    STINGER_TP_RL: 42.4
+    STINGER_TT_RL: 41.0
+    STINGER_TB_FL: null
+    STINGER_TW_FL: VALID
+    STINGER_TB_FR: null
+    STINGER_TW_FR: VALID
+    STINGER_TB_RL: null
+    STINGER_TW_RL: VALID
+    STINGER_TB_RR: null
+    STINGER_TW_RR: VALID
+  response: '7A8102062C00BFFFFFF
+
     7A82180C8570600CC55
+
     7A8220600D2590600D4
+
     7A8235B0600FB87AF87
-    7A824AF92BE92BEAAAA
+
+    7A824AF92BE92BEAAAA'
 - expected_values:
-    KIA_FL_INVALID: 0
-    KIA_FR_INVALID: 0
-    KIA_RL_INVALID: 0
-    KIA_RR_INVALID: 0
-    KIA_TB_FR: 3V+
-    KIA_TPMS_PRESS_RL: 0
-    KIA_TPMS_PRESS_RR: 1.2
-    KIA_TPMS_TEMP_FL: 87
-    KIA_TPMS_TEMP_FR: 6
-    KIA_TPMS_TEMP_RL: -5
-    KIA_TPMS_TEMP_RR: 0
-    KIA_TP_FL: 40.4
-    KIA_TP_FL_PRE21: 40.4
-    KIA_TP_FR: 17
-    KIA_TP_FR_PRE21: 41.4
-    KIA_TP_RL: 1.2
-    KIA_TP_RL_PRE21: 42.4
-    KIA_TP_RR: 0
-    KIA_TP_RR_PRE21: 42.4
-    KIA_TT_FL: 37
-    KIA_TT_FL_PRE21: 37
-    KIA_TT_FR: -44
-    KIA_TT_FR_PRE21: 35
-    KIA_TT_RL: -50
-    KIA_TT_RL_PRE21: 41
-    KIA_TT_RR: 201
-    KIA_TT_RR_PRE21: 39
-    KIA_TW_FL: 0
-    KIA_TW_FR: 1
-    KIA_TW_RL: 1
-    KIA_TW_RR: 1
-  response: |-
-    7A8102062C00BFFFFFF
+    STINGER_TP_FL: 40.4
+    STINGER_TT_FL: 37.0
+    STINGER_TP_FR: 41.4
+    STINGER_TT_FR: 35.0
+    STINGER_TP_RR: 42.4
+    STINGER_TT_RR: 39.0
+    STINGER_TP_RL: 42.4
+    STINGER_TT_RL: 41.0
+    STINGER_TB_FL: null
+    STINGER_TW_FL: VALID
+    STINGER_TB_FR: null
+    STINGER_TW_FR: VALID
+    STINGER_TB_RL: null
+    STINGER_TW_RL: VALID
+    STINGER_TB_RR: null
+    STINGER_TW_RR: VALID
+  response: '7A8102062C00BFFFFFF
+
     7A82180CA570600CF55
+
     7A8220600D4590600D4
+
     7A8235B0600FB87AF87
-    7A824AF92BE92BEAAAA
+
+    7A824AF92BE92BEAAAA'
