--- a/tests/test_cases/2018/commands/770.778.22BC08.yaml
+++ b/tests/test_cases/2018/commands/770.778.22BC08.yaml
@@ -1,20 +1,17 @@
 command_id: 770.778.22BC08
 test_cases:
 - expected_values:
-    KIA_TURN_L: 0
-    KIA_TURN_R: 0
-  response: |-
-    778100B62BC0800779C
-    778218400000000AAAA
+    STINGER_TURN_L: 0
+  response: '778100B62BC0800779C
+
+    778218400000000AAAA'
 - expected_values:
-    KIA_TURN_L: 0
-    KIA_TURN_R: 0
-  response: |-
-    778100B62BC0800779C
-    778218400000900AAAA
+    STINGER_TURN_L: 0
+  response: '778100B62BC0800779C
+
+    778218400000900AAAA'
 - expected_values:
-    KIA_TURN_L: 0
-    KIA_TURN_R: 0
-  response: |-
-    778100B62BC0800779C
-    7782184000C0100AAAA
+    STINGER_TURN_L: 0
+  response: '778100B62BC0800779C
+
+    7782184000C0100AAAA'
