--- a/tests/test_cases/2019/command_support.yaml
+++ b/tests/test_cases/2019/command_support.yaml
@@ -39,21 +39,21 @@ supported_commands_by_ecu:
   - 7E0.7E8.22E001:KIA_EIT,KIA_EOT,KIA_IAT
   - 7E0.7E8.22E004:KIA_22E004,KIA_AUX_SOC,KIA_AUX_SOH
   - 7E0.7E8.22E00A:KIA_KNOCK_LEARN_1,KIA_KNOCK_LEARN_2,KIA_KNOCK_LEARN_3,KIA_KNOCK_LEARN_4,KIA_KNOCK_RETARD_1,KIA_KNOCK_RETARD_2,KIA_KNOCK_RETARD_3,KIA_KNOCK_RETARD_4
-  - 7E0.7E8.22E021:KIA_TB_PRES,KIA_TURBO_BOOST,KIA_WG_DUTY,KIA_WG_POS,KIA_WG_POSITION,KIA_WG_SETPOINT,KIA_WG_SP,KIA_WG_V,KIA_WG_VOLTAGE
+  - 7E0.7E8.22E021:STINGER_TURBO_BOOST,STINGER_WG_VOLTAGE,STINGER_WG_DUTY,STINGER_WG_POSITION,STINGER_WG_SETPOINT
   "7E2":
   - 7E2.7EA.22E004:KIA_12V_V,KIA_ACCELERATOR_PEDAL_POSITION,KIA_VPWR_V3,KIA_VSS_HD
 unsupported_commands_by_ecu:
   "744":
   - 744.74C.22E001|fc=1:KIA_AC_CHRG_STATE,KIA_AUX_BATTERY_VOLTAGE,KIA_DC_CHRG_STATE,KIA_ESTIMATED_CHRG_POWER,KIA_OBC_CHRG_AC_CURRENT,KIA_OBC_CHRG_AC_VOLTAGE,KIA_OBC_CHRG_DC_CURRENT,KIA_OBC_CHRG_DC_VOLTAGE,KIA_OBC_DCHRG_AC_CURRENT,KIA_OBC_DCHRG_DC_CURRENT
   "770":
-  - 770.778.22BC03:KIA_BELT_DRIV,KIA_BELT_DRIVER,KIA_BELT_PASS,KIA_BELT_PASSENGER,KIA_DEFOG_SW,KIA_DOOR_FL,KIA_DOOR_FR,KIA_DOOR_RL,KIA_DOOR_RR,KIA_HANDBRAKE,KIA_HOOD,KIA_LOW_BEAMS,KIA_TRUNK
-  - 770.778.22BC05:KIA_HAZARD_SW,KIA_HL_SW
-  - 770.778.22BC07:KIA_DEFOG_LIGHT
-  - 770.778.22BC09:KIA_HL_HIGH,KIA_HL_LOW
+  - 770.778.22BC03:STINGER_DOOR_RL,STINGER_DOOR_FL,STINGER_HANDBRAKE,STINGER_DOOR_FR,STINGER_DOOR_RR,STINGER_TRUNK,STINGER_BELT_PASSENGER,STINGER_BELT_DRIVER,STINGER_BELT_PASS,STINGER_BELT_DRIV,STINGER_HOOD,STINGER_DEFOG_SW
+  - 770.778.22BC05:STINGER_HAZARD_SW,STINGER_HL_SW
+  - 770.778.22BC07:STINGER_DEFOG_LIGHT
+  - 770.778.22BC09:STINGER_HL_HIGH,STINGER_HL_LOW
   "7B3":
-  - 7B3.7BB.220100|fc=1:KIA_HVAC_AAT,KIA_HVAC_EVAPORATOR_T,KIA_HVAC_HUMIDITY_SENSOR_FOR_AUTOMATIC_DEFOGGER,KIA_HVAC_IAT,KIA_HVAC_IAT_DRIVER_LEGS_VENT,KIA_HVAC_IAT_DRIVER_VENT,KIA_TEMP_EXT,KIA_TEMP_INT,KIA_VSS
+  - 7B3.7BB.220100|fc=1:STINGER_TEMP_INT,STINGER_TEMP_EXT,STINGER_VSS
   "7C6":
-  - 7C6.7CE.22B002|fc=1:KIA_CLUSTER_VOLTAGE,KIA_FLI_VOL,KIA_FLI_VOL_THIRDGEN,KIA_ODO_KM,KIA_ODO_MI,KIA_VPWR
+  - 7C6.7CE.22B002|fc=1:STINGER_FLI_VOL,STINGER_CLUSTER_VOLTAGE,STINGER_ODO_KM,STINGER_ODO_MI
   "7D1":
   - 7D1.7D9.220104:KIA_BRAKE_P_V2,KIA_STEER_ANGLE_V2,KIA_TC_SWITCH_V2,KIA_TIRE_FL_VSS_V2,KIA_TIRE_FR_VSS_V2,KIA_TIRE_RL_VSS_V2,KIA_TIRE_RR_VSS_V2,KIA_VSS_AVG_V2,KIA_WHEEL_FL_VSS
   "7D4":
