--- a/tests/test_cases/2019/commands/7E0.7E8.22E021.yaml
+++ b/tests/test_cases/2019/commands/7E0.7E8.22E021.yaml
@@ -1,52 +1,68 @@
 command_id: 7E0.7E8.22E021
 test_cases:
 - expected_values:
-    KIA_TB_PRES: 85.82843
-    KIA_TURBO_BOOST: 0.44894
-    KIA_WG_DUTY: 69.02266
-    KIA_WG_POS: 381.25027
-    KIA_WG_POSITION: 381.25582
-    KIA_WG_SETPOINT: 86.56138
-    KIA_WG_SP: 86.56012
-    KIA_WG_V: 1.16699
-    KIA_WG_VOLTAGE: 1.16701
-  response: |-
-    7E8105B62E021FE9FCE
+    STINGER_TURBO_BOOST: 0.44894
+    STINGER_WG_VOLTAGE: 1.16701
+    STINGER_WG_DUTY: 69.02266
+    STINGER_WG_POSITION: 381.25582
+    STINGER_WG_SETPOINT: 86.56138
+  response: '7E8105B62E021FE9FCE
+
     7E821FF00000028702C
+
     7E8226F2C5E23D208D3
+
     7E82306AE071F083807
+
     7E82401000000A01000
+
     7E82500000079000000
+
     7E826264D6A16000000
+
     7E827000000001DE058
+
     7E82859F40037663660
+
     7E82921A024601C8019
+
     7E82A401EFF000000A0
+
     7E82B59
+
     7E82CA0218026601C80
-    7E82D1CAAAAAAAAAAAA
+
+    7E82D1CAAAAAAAAAAAA'
 - expected_values:
-    KIA_TB_PRES: 83.366
-    KIA_TURBO_BOOST: 0.09178
-    KIA_WG_DUTY: 69.27901
-    KIA_WG_POS: 385.74857
-    KIA_WG_POSITION: 385.75418
-    KIA_WG_SETPOINT: 84.99886
-    KIA_WG_SP: 84.99762
-    KIA_WG_V: 1.16211
-    KIA_WG_VOLTAGE: 1.16213
-  response: |-
-    7E8105B62E021FE9FCE
+    STINGER_TURBO_BOOST: 0.09178
+    STINGER_WG_VOLTAGE: 1.16213
+    STINGER_WG_DUTY: 69.27901
+    STINGER_WG_POSITION: 385.75418
+    STINGER_WG_SETPOINT: 84.99886
+  response: '7E8105B62E021FE9FCE
+
     7E821FF0000E027472C
+
     7E822462C5A23F608BD
+
     7E823072708B5084408
+
     7E82401000000A01000
+
     7E82500000079000000
+
     7E826254D6616000000
+
     7E827000000001DC058
+
     7E828ADF6E136663660
+
     7E82921A024601C8019
+
     7E82A401EFF000000A0
+
     7E82B59
+
     7E82CA0218026601C80
-    7E82D1CAAAAAAAAAAAA
+
+    7E82D1CAAAAAAAAAAAA'
