--- a/tests/test_cases/2021/commands/7C6.7CE.22B002|fc=1.yaml
+++ b/tests/test_cases/2021/commands/7C6.7CE.22B002|fc=1.yaml
@@ -1,90 +1,82 @@
 command_id: 7C6.7CE.22B002|fc=1
 test_cases:
 - expected_values:
-    KIA_CLUSTER_VOLTAGE: 13.82812
-    KIA_FLI_VOL: 15
-    KIA_FLI_VOL_THIRDGEN: 7.5
-    KIA_ODO_KM: 48092
-    KIA_ODO_MI: 0
-    KIA_VPWR: 13.82812
-  response: |-
-    7CE100F62B002E00000
+    STINGER_FLI_VOL: 15
+    STINGER_CLUSTER_VOLTAGE: 13.82812
+    STINGER_ODO_KM: 48092
+    STINGER_ODO_MI: 0
+  response: '7CE100F62B002E00000
+
     7CE21000FB100BBDC00
-    7CE2200000000000000
+
+    7CE2200000000000000'
 - expected_values:
-    KIA_CLUSTER_VOLTAGE: 13.75
-    KIA_FLI_VOL: 19
-    KIA_FLI_VOL_THIRDGEN: 9.5
-    KIA_ODO_KM: 48075
-    KIA_ODO_MI: 0
-    KIA_VPWR: 13.75
-  response: |-
-    7CE100F62B002E00000
+    STINGER_FLI_VOL: 19
+    STINGER_CLUSTER_VOLTAGE: 13.75
+    STINGER_ODO_KM: 48075
+    STINGER_ODO_MI: 0
+  response: '7CE100F62B002E00000
+
     7CE210013B000BBCB00
-    7CE2200000000000000
+
+    7CE2200000000000000'
 - expected_values:
-    KIA_CLUSTER_VOLTAGE: 13.82812
-    KIA_FLI_VOL: 19
-    KIA_FLI_VOL_THIRDGEN: 9.5
-    KIA_ODO_KM: 48480
-    KIA_ODO_MI: 0
-    KIA_VPWR: 13.82812
-  response: |-
-    7CE100F62B002E00000
+    STINGER_FLI_VOL: 19
+    STINGER_CLUSTER_VOLTAGE: 13.82812
+    STINGER_ODO_KM: 48480
+    STINGER_ODO_MI: 0
+  response: '7CE100F62B002E00000
+
     7CE210013B100BD6000
-    7CE2200000000000000
+
+    7CE2200000000000000'
 - expected_values:
-    KIA_CLUSTER_VOLTAGE: 13.90625
-    KIA_FLI_VOL: 21
-    KIA_FLI_VOL_THIRDGEN: 10.5
-    KIA_ODO_KM: 48479
-    KIA_ODO_MI: 0
-    KIA_VPWR: 13.90625
-  response: |-
-    7CE100F62B002E00000
+    STINGER_FLI_VOL: 21
+    STINGER_CLUSTER_VOLTAGE: 13.90625
+    STINGER_ODO_KM: 48479
+    STINGER_ODO_MI: 0
+  response: '7CE100F62B002E00000
+
     7CE210015B200BD5F00
-    7CE2200000000000000
+
+    7CE2200000000000000'
 - expected_values:
-    KIA_CLUSTER_VOLTAGE: 13.67188
-    KIA_FLI_VOL: 39
-    KIA_FLI_VOL_THIRDGEN: 19.5
-    KIA_ODO_KM: 48144
-    KIA_ODO_MI: 0
-    KIA_VPWR: 13.67188
-  response: |-
-    7CE100F62B002E00000
+    STINGER_FLI_VOL: 39
+    STINGER_CLUSTER_VOLTAGE: 13.67188
+    STINGER_ODO_KM: 48144
+    STINGER_ODO_MI: 0
+  response: '7CE100F62B002E00000
+
     7CE210027AF00BC1000
-    7CE2200000000000000
+
+    7CE2200000000000000'
 - expected_values:
-    KIA_CLUSTER_VOLTAGE: 14.0625
-    KIA_FLI_VOL: 47
-    KIA_FLI_VOL_THIRDGEN: 23.5
-    KIA_ODO_KM: 48562
-    KIA_ODO_MI: 0
-    KIA_VPWR: 14.0625
-  response: |-
-    7CE100F62B002E00000
+    STINGER_FLI_VOL: 47
+    STINGER_CLUSTER_VOLTAGE: 14.0625
+    STINGER_ODO_KM: 48562
+    STINGER_ODO_MI: 0
+  response: '7CE100F62B002E00000
+
     7CE21002FB400BDB200
-    7CE2200000000000000
+
+    7CE2200000000000000'
 - expected_values:
-    KIA_CLUSTER_VOLTAGE: 13.67188
-    KIA_FLI_VOL: 112
-    KIA_FLI_VOL_THIRDGEN: 56
-    KIA_ODO_KM: 133533
-    KIA_ODO_MI: 0
-    KIA_VPWR: 13.67188
-  response: |-
-    7CE100F62B002E00000
+    STINGER_FLI_VOL: 112
+    STINGER_CLUSTER_VOLTAGE: 13.67188
+    STINGER_ODO_KM: 133533
+    STINGER_ODO_MI: 0
+  response: '7CE100F62B002E00000
+
     7CE210070AF02099D00
-    7CE2200000000000000
+
+    7CE2200000000000000'
 - expected_values:
-    KIA_CLUSTER_VOLTAGE: 11.40625
-    KIA_FLI_VOL: 255
-    KIA_FLI_VOL_THIRDGEN: 127.5
-    KIA_ODO_KM: 48526
-    KIA_ODO_MI: 0
-    KIA_VPWR: 11.40625
-  response: |-
-    7CE100F62B002E00000
+    STINGER_FLI_VOL: 255
+    STINGER_CLUSTER_VOLTAGE: 11.40625
+    STINGER_ODO_KM: 48526
+    STINGER_ODO_MI: 0
+  response: '7CE100F62B002E00000
+
     7CE2100FF9200BD8E00
-    7CE2200000000000000
+
+    7CE2200000000000000'
