--- a/tests/test_cases/2022/commands/770.778.22BC04.yaml
+++ b/tests/test_cases/2022/commands/770.778.22BC04.yaml
@@ -1,68 +1,62 @@
 command_id: 770.778.22BC04
 test_cases:
 - expected_values:
-    KIA_BELT_RL: 1
-    KIA_BELT_RM: 1
-    KIA_BELT_RR: 1
-    KIA_GEAR_R: 0
-    KIA_LOCK_FL: 0
-    KIA_LOCK_FR: 0
-    KIA_REVERSE_GEAR: 0
-  response: |-
-    778100B62BC04332770
-    778216A00000E02AAAA
+    STINGER_LOCK_FR: 0
+    STINGER_LOCK_FL: 0
+    STINGER_REVERSE_GEAR: 0
+    STINGER_BELT_RM: 1
+    STINGER_BELT_RL: 1
+    STINGER_BELT_RR: 1
+  response: '778100B62BC04332770
+
+    778216A00000E02AAAA'
 - expected_values:
-    KIA_BELT_RL: 1
-    KIA_BELT_RM: 1
-    KIA_BELT_RR: 1
-    KIA_GEAR_R: 0
-    KIA_LOCK_FL: 0
-    KIA_LOCK_FR: 0
-    KIA_REVERSE_GEAR: 0
-  response: |-
-    778100B62BC04332770
-    778216A00000E42AAAA
+    STINGER_LOCK_FR: 0
+    STINGER_LOCK_FL: 0
+    STINGER_REVERSE_GEAR: 0
+    STINGER_BELT_RM: 1
+    STINGER_BELT_RL: 1
+    STINGER_BELT_RR: 1
+  response: '778100B62BC04332770
+
+    778216A00000E42AAAA'
 - expected_values:
-    KIA_BELT_RL: 1
-    KIA_BELT_RM: 1
-    KIA_BELT_RR: 1
-    KIA_GEAR_R: 0
-    KIA_LOCK_FL: 0
-    KIA_LOCK_FR: 0
-    KIA_REVERSE_GEAR: 0
-  response: |-
-    778100B62BC04332770
-    778216A00000E52AAAA
+    STINGER_LOCK_FR: 0
+    STINGER_LOCK_FL: 0
+    STINGER_REVERSE_GEAR: 0
+    STINGER_BELT_RM: 1
+    STINGER_BELT_RL: 1
+    STINGER_BELT_RR: 1
+  response: '778100B62BC04332770
+
+    778216A00000E52AAAA'
 - expected_values:
-    KIA_BELT_RL: 1
-    KIA_BELT_RM: 1
-    KIA_BELT_RR: 1
-    KIA_GEAR_R: 0
-    KIA_LOCK_FL: 0
-    KIA_LOCK_FR: 0
-    KIA_REVERSE_GEAR: 0
-  response: |-
-    778100B62BC04332770
-    778216A00600E42AAAA
+    STINGER_LOCK_FR: 0
+    STINGER_LOCK_FL: 0
+    STINGER_REVERSE_GEAR: 0
+    STINGER_BELT_RM: 1
+    STINGER_BELT_RL: 1
+    STINGER_BELT_RR: 1
+  response: '778100B62BC04332770
+
+    778216A00600E42AAAA'
 - expected_values:
-    KIA_BELT_RL: 1
-    KIA_BELT_RM: 1
-    KIA_BELT_RR: 1
-    KIA_GEAR_R: 0
-    KIA_LOCK_FL: 0
-    KIA_LOCK_FR: 0
-    KIA_REVERSE_GEAR: 1
-  response: |-
-    778100B62BC04332770
-    778216A08000E42AAAA
+    STINGER_LOCK_FR: 0
+    STINGER_LOCK_FL: 0
+    STINGER_REVERSE_GEAR: 1
+    STINGER_BELT_RM: 1
+    STINGER_BELT_RL: 1
+    STINGER_BELT_RR: 1
+  response: '778100B62BC04332770
+
+    778216A08000E42AAAA'
 - expected_values:
-    KIA_BELT_RL: 1
-    KIA_BELT_RM: 1
-    KIA_BELT_RR: 1
-    KIA_GEAR_R: 0
-    KIA_LOCK_FL: 0
-    KIA_LOCK_FR: 0
-    KIA_REVERSE_GEAR: 1
-  response: |-
-    778100B62BC04332770
-    778216A0C000E42AAAA
+    STINGER_LOCK_FR: 0
+    STINGER_LOCK_FL: 0
+    STINGER_REVERSE_GEAR: 1
+    STINGER_BELT_RM: 1
+    STINGER_BELT_RL: 1
+    STINGER_BELT_RR: 1
+  response: '778100B62BC04332770
+
+    778216A0C000E42AAAA'
