--- a/tests/test_cases/2022/commands/7B3.7BB.220100|fc=1.yaml
+++ b/tests/test_cases/2022/commands/7B3.7BB.220100|fc=1.yaml
@@ -1,512 +1,452 @@
 command_id: 7B3.7BB.220100|fc=1
 test_cases:
 - expected_values:
-    KIA_HVAC_AAT: 12.5
-    KIA_HVAC_EVAPORATOR_T: 3
-    KIA_HVAC_HUMIDITY_SENSOR_FOR_AUTOMATIC_DEFOGGER: 26
-    KIA_HVAC_IAT: 17.5
-    KIA_HVAC_IAT_DRIVER_LEGS_VENT: 87.5
-    KIA_HVAC_IAT_DRIVER_VENT: 87.5
-    KIA_TEMP_EXT: 12.5
-    KIA_TEMP_INT: 17.5
-    KIA_VSS: 25
-  response: |-
-    7BB10256201007F901E
+    STINGER_TEMP_INT: 17.5
+    STINGER_TEMP_EXT: 12.5
+    STINGER_VSS: 25
+  response: '7BB10256201007F901E
+
     7BB2168FF7369560B6E
+
     7BB226A096DFFFF0FFF
+
     7BB23FFFFFFFFFF4C0E
+
     7BB24121AC6FFFF1974
-    7BB25FF01FFAAAAAAAA
+
+    7BB25FF01FFAAAAAAAA'
 - expected_values:
-    KIA_HVAC_AAT: 13.5
-    KIA_HVAC_EVAPORATOR_T: 2
-    KIA_HVAC_HUMIDITY_SENSOR_FOR_AUTOMATIC_DEFOGGER: 29
-    KIA_HVAC_IAT: 17.5
-    KIA_HVAC_IAT_DRIVER_LEGS_VENT: 87.5
-    KIA_HVAC_IAT_DRIVER_VENT: 87.5
-    KIA_TEMP_EXT: 13.5
-    KIA_TEMP_INT: 17.5
-    KIA_VSS: 24
-  response: |-
-    7BB10256201007F901E
+    STINGER_TEMP_INT: 17.5
+    STINGER_TEMP_EXT: 13.5
+    STINGER_VSS: 24
+  response: '7BB10256201007F901E
+
     7BB2168FF736B540A6B
+
     7BB226A096AFFFF0FFF
+
     7BB23FFFFFFFFFF4D0E
+
     7BB24121DC6FFFF186B
-    7BB25FF01FFAAAAAAAA
+
+    7BB25FF01FFAAAAAAAA'
 - expected_values:
-    KIA_HVAC_AAT: 17.5
-    KIA_HVAC_EVAPORATOR_T: 3.5
-    KIA_HVAC_HUMIDITY_SENSOR_FOR_AUTOMATIC_DEFOGGER: 49
-    KIA_HVAC_IAT: 19
-    KIA_HVAC_IAT_DRIVER_LEGS_VENT: 87.5
-    KIA_HVAC_IAT_DRIVER_VENT: 87.5
-    KIA_TEMP_EXT: 17.5
-    KIA_TEMP_INT: 19
-    KIA_VSS: 67
-  response: |-
-    7BB10256201007F901E
+    STINGER_TEMP_INT: 19
+    STINGER_TEMP_EXT: 17.5
+    STINGER_VSS: 67
+  response: '7BB10256201007F901E
+
     7BB2168FF7673570099
+
     7BB22950098FFFF10FF
+
     7BB23FFFFFFFFFF4D0E
+
     7BB240B31C5FFFF43A6
-    7BB25FF01FFAAAAAAAA
+
+    7BB25FF01FFAAAAAAAA'
 - expected_values:
-    KIA_HVAC_AAT: 18
-    KIA_HVAC_EVAPORATOR_T: 2.5
-    KIA_HVAC_HUMIDITY_SENSOR_FOR_AUTOMATIC_DEFOGGER: 54
-    KIA_HVAC_IAT: 19
-    KIA_HVAC_IAT_DRIVER_LEGS_VENT: 87.5
-    KIA_HVAC_IAT_DRIVER_VENT: 87.5
-    KIA_TEMP_EXT: 18
-    KIA_TEMP_INT: 19
-    KIA_VSS: 0
-  response: |-
-    7BB10256201007F901E
+    STINGER_TEMP_INT: 19
+    STINGER_TEMP_EXT: 18
+    STINGER_VSS: 0
+  response: '7BB10256201007F901E
+
     7BB2168FF7674550072
+
     7BB226A0072FFFF10FF
+
     7BB23FFFFFFFFFF4D0E
+
     7BB240B36C5FFFF0096
-    7BB25FF01FFAAAAAAAA
+
+    7BB25FF01FFAAAAAAAA'
 - expected_values:
-    KIA_HVAC_AAT: 19.5
-    KIA_HVAC_EVAPORATOR_T: 4.5
-    KIA_HVAC_HUMIDITY_SENSOR_FOR_AUTOMATIC_DEFOGGER: 58
-    KIA_HVAC_IAT: 19
-    KIA_HVAC_IAT_DRIVER_LEGS_VENT: 87.5
-    KIA_HVAC_IAT_DRIVER_VENT: 87.5
-    KIA_TEMP_EXT: 19.5
-    KIA_TEMP_INT: 19
-    KIA_VSS: 41
-  response: |-
-    7BB10256201007F901E
+    STINGER_TEMP_INT: 19
+    STINGER_TEMP_EXT: 19.5
+    STINGER_VSS: 41
+  response: '7BB10256201007F901E
+
     7BB2168FF7677590070
+
     7BB226B0070FFFF10FF
+
     7BB23FFFFFFFFFF4D0E
+
     7BB240B3AC5FFFF297D
-    7BB25FF01FFAAAAAAAA
+
+    7BB25FF01FFAAAAAAAA'
 - expected_values:
-    KIA_HVAC_AAT: 29
-    KIA_HVAC_EVAPORATOR_T: 4.5
-    KIA_HVAC_HUMIDITY_SENSOR_FOR_AUTOMATIC_DEFOGGER: 23
-    KIA_HVAC_IAT: 19.5
-    KIA_HVAC_IAT_DRIVER_LEGS_VENT: 87.5
-    KIA_HVAC_IAT_DRIVER_VENT: 87.5
-    KIA_TEMP_EXT: 29
-    KIA_TEMP_INT: 19.5
-    KIA_VSS: 7
-  response: |-
-    7BB10256201007F901E
+    STINGER_TEMP_INT: 19.5
+    STINGER_TEMP_EXT: 29
+    STINGER_VSS: 7
+  response: '7BB10256201007F901E
+
     7BB2168FF778A59040F
+
     7BB223C040FFFFFEFFF
+
     7BB23FFFFFFFFFF4C0E
+
     7BB240E17F2FFFF07C8
-    7BB25FF01FFAAAAAAAA
+
+    7BB25FF01FFAAAAAAAA'
 - expected_values:
-    KIA_HVAC_AAT: 18
-    KIA_HVAC_EVAPORATOR_T: 4
-    KIA_HVAC_HUMIDITY_SENSOR_FOR_AUTOMATIC_DEFOGGER: 50
-    KIA_HVAC_IAT: 20.5
-    KIA_HVAC_IAT_DRIVER_LEGS_VENT: 87.5
-    KIA_HVAC_IAT_DRIVER_VENT: 87.5
-    KIA_TEMP_EXT: 18
-    KIA_TEMP_INT: 20.5
-    KIA_VSS: 55
-  response: |-
-    7BB10256201007F901E
+    STINGER_TEMP_INT: 20.5
+    STINGER_TEMP_EXT: 18
+    STINGER_VSS: 55
+  response: '7BB10256201007F901E
+
     7BB2168FF79745800AF
+
     7BB22F000AEFFFF0EFF
+
     7BB23FFFFFFFFFFEA0E
+
     7BB240B322DFFFF378F
-    7BB25FF01FFAAAAAAAA
+
+    7BB25FF01FFAAAAAAAA'
 - expected_values:
-    KIA_HVAC_AAT: 34
-    KIA_HVAC_EVAPORATOR_T: 1.5
-    KIA_HVAC_HUMIDITY_SENSOR_FOR_AUTOMATIC_DEFOGGER: 19
-    KIA_HVAC_IAT: 22.5
-    KIA_HVAC_IAT_DRIVER_LEGS_VENT: 87.5
-    KIA_HVAC_IAT_DRIVER_VENT: 87.5
-    KIA_TEMP_EXT: 34
-    KIA_TEMP_INT: 22.5
-    KIA_VSS: 79
-  response: |-
-    7BB10256201007F901E
+    STINGER_TEMP_INT: 22.5
+    STINGER_TEMP_EXT: 34
+    STINGER_VSS: 79
+  response: '7BB10256201007F901E
+
     7BB2168FF7D9453092F
+
     7BB223B0730FFFFF0FF
+
     7BB23FFFFFFFFFF4B0E
+
     7BB240D13EFFFFF4FC1
-    7BB25FF01FFAAAAAAAA
+
+    7BB25FF01FFAAAAAAAA'
 - expected_values:
-    KIA_HVAC_AAT: 24
-    KIA_HVAC_EVAPORATOR_T: 5
-    KIA_HVAC_HUMIDITY_SENSOR_FOR_AUTOMATIC_DEFOGGER: 31
-    KIA_HVAC_IAT: 23
-    KIA_HVAC_IAT_DRIVER_LEGS_VENT: 87.5
-    KIA_HVAC_IAT_DRIVER_VENT: 87.5
-    KIA_TEMP_EXT: 24
-    KIA_TEMP_INT: 23
-    KIA_VSS: 0
-  response: |-
-    7BB10256201007F901E
+    STINGER_TEMP_INT: 23
+    STINGER_TEMP_EXT: 24
+    STINGER_VSS: 0
+  response: '7BB10256201007F901E
+
     7BB2168FF7E805A003F
+
     7BB226A003EFFFF0DFF
+
     7BB23FFFFFFFFFF9345
+
     7BB24501FF1FFFF00C7
-    7BB25FF01FFAAAAAAAA
+
+    7BB25FF01FFAAAAAAAA'
 - expected_values:
-    KIA_HVAC_AAT: 30
-    KIA_HVAC_EVAPORATOR_T: 4
-    KIA_HVAC_HUMIDITY_SENSOR_FOR_AUTOMATIC_DEFOGGER: 29
-    KIA_HVAC_IAT: 23
-    KIA_HVAC_IAT_DRIVER_LEGS_VENT: 87.5
-    KIA_HVAC_IAT_DRIVER_VENT: 87.5
-    KIA_TEMP_EXT: 30
-    KIA_TEMP_INT: 23
-    KIA_VSS: 141
-  response: |-
-    7BB10256201007F901E
+    STINGER_TEMP_INT: 23
+    STINGER_TEMP_EXT: 30
+    STINGER_VSS: 141
+  response: '7BB10256201007F901E
+
     7BB2168FF7E8C58003C
+
     7BB223D003BFFFF3BFF
+
     7BB23FFFFFFFFFF4B0E
+
     7BB240C1DF2FFFF8DC6
-    7BB25FF01FFAAAAAAAA
+
+    7BB25FF01FFAAAAAAAA'
 - expected_values:
-    KIA_HVAC_AAT: 30.5
-    KIA_HVAC_EVAPORATOR_T: 8
-    KIA_HVAC_HUMIDITY_SENSOR_FOR_AUTOMATIC_DEFOGGER: 28
-    KIA_HVAC_IAT: 23
-    KIA_HVAC_IAT_DRIVER_LEGS_VENT: 87.5
-    KIA_HVAC_IAT_DRIVER_VENT: 87.5
-    KIA_TEMP_EXT: 30.5
-    KIA_TEMP_INT: 23
-    KIA_VSS: 0
-  response: |-
-    7BB10256201007F901E
+    STINGER_TEMP_INT: 23
+    STINGER_TEMP_EXT: 30.5
+    STINGER_VSS: 0
+  response: '7BB10256201007F901E
+
     7BB2168FF7E8D600233
+
     7BB223B0232FFFF93FF
+
     7BB23FFFFFFFFFF4B0E
+
     7BB240D1CF3FFFF00BD
-    7BB25FF01FFAAAAAAAA
+
+    7BB25FF01FFAAAAAAAA'
 - expected_values:
-    KIA_HVAC_AAT: 22.5
-    KIA_HVAC_EVAPORATOR_T: 4.5
-    KIA_HVAC_HUMIDITY_SENSOR_FOR_AUTOMATIC_DEFOGGER: 60
-    KIA_HVAC_IAT: 23.5
-    KIA_HVAC_IAT_DRIVER_LEGS_VENT: 87.5
-    KIA_HVAC_IAT_DRIVER_VENT: 87.5
-    KIA_TEMP_EXT: 22.5
-    KIA_TEMP_INT: 23.5
-    KIA_VSS: 43
-  response: |-
-    7BB10256201007F901E
+    STINGER_TEMP_INT: 23.5
+    STINGER_TEMP_EXT: 22.5
+    STINGER_VSS: 43
+  response: '7BB10256201007F901E
+
     7BB2168FF7F7D59000F
+
     7BB22100011FFFFEFFF
+
     7BB23FFFFFFFFFF4C0E
+
     7BB24113CEFFFFF2B86
-    7BB25FF01FFAAAAAAAA
+
+    7BB25FF01FFAAAAAAAA'
 - expected_values:
-    KIA_HVAC_AAT: 23
-    KIA_HVAC_EVAPORATOR_T: 4
-    KIA_HVAC_HUMIDITY_SENSOR_FOR_AUTOMATIC_DEFOGGER: 45
-    KIA_HVAC_IAT: 23.5
-    KIA_HVAC_IAT_DRIVER_LEGS_VENT: 87.5
-    KIA_HVAC_IAT_DRIVER_VENT: 87.5
-    KIA_TEMP_EXT: 23
-    KIA_TEMP_INT: 23.5
-    KIA_VSS: 75
-  response: |-
-    7BB10256201007F901E
+    STINGER_TEMP_INT: 23.5
+    STINGER_TEMP_EXT: 23
+    STINGER_VSS: 75
+  response: '7BB10256201007F901E
+
     7BB2168FF7F7E580064
+
     7BB226A0063FFFF0FFF
+
     7BB23FFFFFFFFFF4D0E
+
     7BB240C2DF5FFFF4BA7
-    7BB25FF01FFAAAAAAAA
+
+    7BB25FF01FFAAAAAAAA'
 - expected_values:
-    KIA_HVAC_AAT: 24
-    KIA_HVAC_EVAPORATOR_T: 5.5
-    KIA_HVAC_HUMIDITY_SENSOR_FOR_AUTOMATIC_DEFOGGER: 26
-    KIA_HVAC_IAT: 23.5
-    KIA_HVAC_IAT_DRIVER_LEGS_VENT: 87.5
-    KIA_HVAC_IAT_DRIVER_VENT: 87.5
-    KIA_TEMP_EXT: 24
-    KIA_TEMP_INT: 23.5
-    KIA_VSS: 0
-  response: |-
-    7BB10256201007F901E
+    STINGER_TEMP_INT: 23.5
+    STINGER_TEMP_EXT: 24
+    STINGER_VSS: 0
+  response: '7BB10256201007F901E
+
     7BB2168FF7F805B003D
+
     7BB226A003DFFFF0EFF
+
     7BB23FFFFFFFFFF9344
+
     7BB24501AF1FFFF00C3
-    7BB25FF01FFAAAAAAAA
+
+    7BB25FF01FFAAAAAAAA'
 - expected_values:
-    KIA_HVAC_AAT: 32.5
-    KIA_HVAC_EVAPORATOR_T: 6.5
-    KIA_HVAC_HUMIDITY_SENSOR_FOR_AUTOMATIC_DEFOGGER: 21
-    KIA_HVAC_IAT: 23.5
-    KIA_HVAC_IAT_DRIVER_LEGS_VENT: 87.5
-    KIA_HVAC_IAT_DRIVER_VENT: 87.5
-    KIA_TEMP_EXT: 32.5
-    KIA_TEMP_INT: 23.5
-    KIA_VSS: 16
-  response: |-
-    7BB10256201007F901E
+    STINGER_TEMP_INT: 23.5
+    STINGER_TEMP_EXT: 32.5
+    STINGER_VSS: 16
+  response: '7BB10256201007F901E
+
     7BB2168FF7F915D0140
+
     7BB223B0141FFFF61FF
+
     7BB23FFFFFFFFFF4B0E
+
     7BB240D15EFFFFF10C8
-    7BB25FF01FFAAAAAAAA
+
+    7BB25FF01FFAAAAAAAA'
 - expected_values:
-    KIA_HVAC_AAT: 17.5
-    KIA_HVAC_EVAPORATOR_T: 3
-    KIA_HVAC_HUMIDITY_SENSOR_FOR_AUTOMATIC_DEFOGGER: 44
-    KIA_HVAC_IAT: 24
-    KIA_HVAC_IAT_DRIVER_LEGS_VENT: 87.5
-    KIA_HVAC_IAT_DRIVER_VENT: 87.5
-    KIA_TEMP_EXT: 17.5
-    KIA_TEMP_INT: 24
-    KIA_VSS: 24
-  response: |-
-    7BB10256201007F901E
+    STINGER_TEMP_INT: 24
+    STINGER_TEMP_EXT: 17.5
+    STINGER_VSS: 24
+  response: '7BB10256201007F901E
+
     7BB2168FF8073560087
+
     7BB22950086FFFF0FFF
+
     7BB23FFFFFFFFFF4C0E
+
     7BB240B2CF1FFFF18C8
-    7BB25FF01FFAAAAAAAA
+
+    7BB25FF01FFAAAAAAAA'
 - expected_values:
-    KIA_HVAC_AAT: 22.5
-    KIA_HVAC_EVAPORATOR_T: 5.5
-    KIA_HVAC_HUMIDITY_SENSOR_FOR_AUTOMATIC_DEFOGGER: 44
-    KIA_HVAC_IAT: 24
-    KIA_HVAC_IAT_DRIVER_LEGS_VENT: 87.5
-    KIA_HVAC_IAT_DRIVER_VENT: 87.5
-    KIA_TEMP_EXT: 22.5
-    KIA_TEMP_INT: 24
-    KIA_VSS: 0
-  response: |-
-    7BB10256201007F901E
+    STINGER_TEMP_INT: 24
+    STINGER_TEMP_EXT: 22.5
+    STINGER_VSS: 0
+  response: '7BB10256201007F901E
+
     7BB2168FF807D5B0063
+
     7BB226A0063FFFF54FF
+
     7BB23FFFFFFFFFF4D0E
+
     7BB240C2CF3FFFF00B6
-    7BB25FF00FFAAAAAAAA
+
+    7BB25FF00FFAAAAAAAA'
 - expected_values:
-    KIA_HVAC_AAT: 22.5
-    KIA_HVAC_EVAPORATOR_T: 5
-    KIA_HVAC_HUMIDITY_SENSOR_FOR_AUTOMATIC_DEFOGGER: 41
-    KIA_HVAC_IAT: 24.5
-    KIA_HVAC_IAT_DRIVER_LEGS_VENT: 87.5
-    KIA_HVAC_IAT_DRIVER_VENT: 87.5
-    KIA_TEMP_EXT: 22.5
-    KIA_TEMP_INT: 24.5
-    KIA_VSS: 0
-  response: |-
-    7BB10256201007F901E
+    STINGER_TEMP_INT: 24.5
+    STINGER_TEMP_EXT: 22.5
+    STINGER_VSS: 0
+  response: '7BB10256201007F901E
+
     7BB2168FF817D5A0F5C
+
     7BB226A065EFFFF0FFF
+
     7BB23FFFFFFFFFF4D0E
+
     7BB240C29F3FFFF00C9
-    7BB25FF01FFAAAAAAAA
+
+    7BB25FF01FFAAAAAAAA'
 - expected_values:
-    KIA_HVAC_AAT: 31.5
-    KIA_HVAC_EVAPORATOR_T: 8
-    KIA_HVAC_HUMIDITY_SENSOR_FOR_AUTOMATIC_DEFOGGER: 14
-    KIA_HVAC_IAT: 24.5
-    KIA_HVAC_IAT_DRIVER_LEGS_VENT: 87.5
-    KIA_HVAC_IAT_DRIVER_VENT: 87.5
-    KIA_TEMP_EXT: 31.5
-    KIA_TEMP_INT: 24.5
-    KIA_VSS: 0
-  response: |-
-    7BB10256201007F901E
+    STINGER_TEMP_INT: 24.5
+    STINGER_TEMP_EXT: 31.5
+    STINGER_VSS: 0
+  response: '7BB10256201007F901E
+
     7BB2168FF818F601C21
+
     7BB223B1129FFFFADFF
+
     7BB23FFFFFFFFFF4C0E
+
     7BB240C0EF2FFFF00BD
-    7BB25FF01FFAAAAAAAA
+
+    7BB25FF01FFAAAAAAAA'
 - expected_values:
-    KIA_HVAC_AAT: 29.5
-    KIA_HVAC_EVAPORATOR_T: 3.5
-    KIA_HVAC_HUMIDITY_SENSOR_FOR_AUTOMATIC_DEFOGGER: 15
-    KIA_HVAC_IAT: 25
-    KIA_HVAC_IAT_DRIVER_LEGS_VENT: 87.5
-    KIA_HVAC_IAT_DRIVER_VENT: 87.5
-    KIA_TEMP_EXT: 29.5
-    KIA_TEMP_INT: 25
-    KIA_VSS: 85
-  response: |-
-    7BB10256201007F901E
+    STINGER_TEMP_INT: 25
+    STINGER_TEMP_EXT: 29.5
+    STINGER_VSS: 85
+  response: '7BB10256201007F901E
+
     7BB2168FF828B57423D
+
     7BB223B463EFFFF55FF
+
     7BB23FFFFFFFFFF4D0F
+
     7BB240D0FF2FFFF55C6
-    7BB25FF01FFAAAAAAAA
+
+    7BB25FF01FFAAAAAAAA'
 - expected_values:
-    KIA_HVAC_AAT: 22.5
-    KIA_HVAC_EVAPORATOR_T: 5
-    KIA_HVAC_HUMIDITY_SENSOR_FOR_AUTOMATIC_DEFOGGER: 82
-    KIA_HVAC_IAT: 26
-    KIA_HVAC_IAT_DRIVER_LEGS_VENT: 87.5
-    KIA_HVAC_IAT_DRIVER_VENT: 87.5
-    KIA_TEMP_EXT: 22.5
-    KIA_TEMP_INT: 26
-    KIA_VSS: 92
-  response: |-
-    7BB10256201007F901E
+    STINGER_TEMP_INT: 26
+    STINGER_TEMP_EXT: 22.5
+    STINGER_VSS: 92
+  response: '7BB10256201007F901E
+
     7BB2168FF847D5A0048
+
     7BB223D0048FFFF0FFF
+
     7BB23FFFFFFFFFF4C0E
+
     7BB2412528DFFFF5CC5
-    7BB25FF01FFAAAAAAAA
+
+    7BB25FF01FFAAAAAAAA'
 - expected_values:
-    KIA_HVAC_AAT: 30
-    KIA_HVAC_EVAPORATOR_T: 15
-    KIA_HVAC_HUMIDITY_SENSOR_FOR_AUTOMATIC_DEFOGGER: 32
-    KIA_HVAC_IAT: 26
-    KIA_HVAC_IAT_DRIVER_LEGS_VENT: 87.5
-    KIA_HVAC_IAT_DRIVER_VENT: 87.5
-    KIA_TEMP_EXT: 30
-    KIA_TEMP_INT: 26
-    KIA_VSS: 0
-  response: |-
-    7BB10256201007F901E
+    STINGER_TEMP_INT: 26
+    STINGER_TEMP_EXT: 30
+    STINGER_VSS: 0
+  response: '7BB10256201007F901E
+
     7BB2168FF848C6E03F0
+
     7BB229503F0FFFF0FFF
+
     7BB23FFFFFFFFFF4B0E
+
     7BB240D20F3FFFF00CA
-    7BB25FF00FFAAAAAAAA
+
+    7BB25FF00FFAAAAAAAA'
 - expected_values:
-    KIA_HVAC_AAT: 34.5
-    KIA_HVAC_EVAPORATOR_T: 2
-    KIA_HVAC_HUMIDITY_SENSOR_FOR_AUTOMATIC_DEFOGGER: 23
-    KIA_HVAC_IAT: 26
-    KIA_HVAC_IAT_DRIVER_LEGS_VENT: 87.5
-    KIA_HVAC_IAT_DRIVER_VENT: 87.5
-    KIA_TEMP_EXT: 34.5
-    KIA_TEMP_INT: 26
-    KIA_VSS: 95
-  response: |-
-    7BB10256201007F901E
+    STINGER_TEMP_INT: 26
+    STINGER_TEMP_EXT: 34.5
+    STINGER_VSS: 95
+  response: '7BB10256201007F901E
+
     7BB2168FF8495542012
+
     7BB220F1E14FFFFF0FF
+
     7BB23FFFFFFFFFF4C0E
+
     7BB240C17F2FFFF5FC8
-    7BB25FF01FFAAAAAAAA
+
+    7BB25FF01FFAAAAAAAA'
 - expected_values:
-    KIA_HVAC_AAT: 22
-    KIA_HVAC_EVAPORATOR_T: 4
-    KIA_HVAC_HUMIDITY_SENSOR_FOR_AUTOMATIC_DEFOGGER: 82
-    KIA_HVAC_IAT: 26.5
-    KIA_HVAC_IAT_DRIVER_LEGS_VENT: 87.5
-    KIA_HVAC_IAT_DRIVER_VENT: 87.5
-    KIA_TEMP_EXT: 22
-    KIA_TEMP_INT: 26.5
-    KIA_VSS: 124
-  response: |-
-    7BB10256201007F901E
+    STINGER_TEMP_INT: 26.5
+    STINGER_TEMP_EXT: 22
+    STINGER_VSS: 124
+  response: '7BB10256201007F901E
+
     7BB2168FF857C580048
+
     7BB223D0048FFFF0FFF
+
     7BB23FFFFFFFFFF4C0E
+
     7BB2412528DFFFF7CD0
-    7BB25FF01FFAAAAAAAA
+
+    7BB25FF01FFAAAAAAAA'
 - expected_values:
-    KIA_HVAC_AAT: 30
-    KIA_HVAC_EVAPORATOR_T: 6.5
-    KIA_HVAC_HUMIDITY_SENSOR_FOR_AUTOMATIC_DEFOGGER: 13
-    KIA_HVAC_IAT: 26.5
-    KIA_HVAC_IAT_DRIVER_LEGS_VENT: 87.5
-    KIA_HVAC_IAT_DRIVER_VENT: 87.5
-    KIA_TEMP_EXT: 30
-    KIA_TEMP_INT: 26.5
-    KIA_VSS: 36
-  response: |-
-    7BB10256201007F901E
+    STINGER_TEMP_INT: 26.5
+    STINGER_TEMP_EXT: 30
+    STINGER_VSS: 36
+  response: '7BB10256201007F901E
+
     7BB2168FF858C5D4E40
+
     7BB223B5440FFFF4DFF
+
     7BB23FFFFFFFFFF4D0E
+
     7BB240D0DF2FFFF24CB
-    7BB25FF01FFAAAAAAAA
+
+    7BB25FF01FFAAAAAAAA'
 - expected_values:
-    KIA_HVAC_AAT: 26
-    KIA_HVAC_EVAPORATOR_T: 7.5
-    KIA_HVAC_HUMIDITY_SENSOR_FOR_AUTOMATIC_DEFOGGER: 40
-    KIA_HVAC_IAT: 27
-    KIA_HVAC_IAT_DRIVER_LEGS_VENT: 87.5
-    KIA_HVAC_IAT_DRIVER_VENT: 87.5
-    KIA_TEMP_EXT: 26
-    KIA_TEMP_INT: 27
-    KIA_VSS: 77
-  response: |-
-    7BB10256201007F901E
+    STINGER_TEMP_INT: 27
+    STINGER_TEMP_EXT: 26
+    STINGER_VSS: 77
+  response: '7BB10256201007F901E
+
     7BB2168FF86845F005B
+
     7BB22EF005BFFFF0EFF
+
     7BB23FFFFFFFFFFE90E
+
     7BB240E282BFFFF4DA3
-    7BB25FF01FFAAAAAAAA
+
+    7BB25FF01FFAAAAAAAA'
 - expected_values:
-    KIA_HVAC_AAT: 32
-    KIA_HVAC_EVAPORATOR_T: 3
-    KIA_HVAC_HUMIDITY_SENSOR_FOR_AUTOMATIC_DEFOGGER: 8
-    KIA_HVAC_IAT: 27
-    KIA_HVAC_IAT_DRIVER_LEGS_VENT: 87.5
-    KIA_HVAC_IAT_DRIVER_VENT: 87.5
-    KIA_TEMP_EXT: 32
-    KIA_TEMP_INT: 27
-    KIA_VSS: 63
-  response: |-
-    7BB10256201007F901E
+    STINGER_TEMP_INT: 27
+    STINGER_TEMP_EXT: 32
+    STINGER_VSS: 63
+  response: '7BB10256201007F901E
+
     7BB2168FF8690563035
+
     7BB22103F32FFFF9BFF
+
     7BB23FFFFFFFFFF4D0E
+
     7BB240C08F2FFFF3FC4
-    7BB25FF01FFAAAAAAAA
+
+    7BB25FF01FFAAAAAAAA'
 - expected_values:
-    KIA_HVAC_AAT: 27
-    KIA_HVAC_EVAPORATOR_T: 2.5
-    KIA_HVAC_HUMIDITY_SENSOR_FOR_AUTOMATIC_DEFOGGER: 47
-    KIA_HVAC_IAT: 27.5
-    KIA_HVAC_IAT_DRIVER_LEGS_VENT: 87.5
-    KIA_HVAC_IAT_DRIVER_VENT: 87.5
-    KIA_TEMP_EXT: 27
-    KIA_TEMP_INT: 27.5
-    KIA_VSS: 0
-  response: |-
-    7BB10256201007F901E
+    STINGER_TEMP_INT: 27.5
+    STINGER_TEMP_EXT: 27
+    STINGER_VSS: 0
+  response: '7BB10256201007F901E
+
     7BB2168FF8786550056
+
     7BB223D0057FFFF0FFF
+
     7BB23FFFFFFFFFF4F0E
+
     7BB240D2FF2FFFF008F
-    7BB25FF01FFAAAAAAAA
+
+    7BB25FF01FFAAAAAAAA'
 - expected_values:
-    KIA_HVAC_AAT: 31
-    KIA_HVAC_EVAPORATOR_T: 7.5
-    KIA_HVAC_HUMIDITY_SENSOR_FOR_AUTOMATIC_DEFOGGER: 9
-    KIA_HVAC_IAT: 29
-    KIA_HVAC_IAT_DRIVER_LEGS_VENT: 87.5
-    KIA_HVAC_IAT_DRIVER_VENT: 87.5
-    KIA_TEMP_EXT: 31
-    KIA_TEMP_INT: 29
-    KIA_VSS: 0
-  response: |-
-    7BB10256201007F901E
+    STINGER_TEMP_INT: 29
+    STINGER_TEMP_EXT: 31
+    STINGER_VSS: 0
+  response: '7BB10256201007F901E
+
     7BB2168FF8A8E5F4B16
+
     7BB22104D15FFFFBDFF
+
     7BB23FFFFFFFFFF4D0E
+
     7BB240C09F2FFFF00C8
-    7BB25FF01FFAAAAAAAA
+
+    7BB25FF01FFAAAAAAAA'
 - expected_values:
-    KIA_HVAC_AAT: 35
-    KIA_HVAC_EVAPORATOR_T: 14.5
-    KIA_HVAC_HUMIDITY_SENSOR_FOR_AUTOMATIC_DEFOGGER: 9
-    KIA_HVAC_IAT: 48.5
-    KIA_HVAC_IAT_DRIVER_LEGS_VENT: 87.5
-    KIA_HVAC_IAT_DRIVER_VENT: 87.5
-    KIA_TEMP_EXT: 35
-    KIA_TEMP_INT: 48.5
-    KIA_VSS: 40
-  response: |-
-    7BB10256201007F901E
+    STINGER_TEMP_INT: 48.5
+    STINGER_TEMP_EXT: 35
+    STINGER_VSS: 40
+  response: '7BB10256201007F901E
+
     7BB2168FFB1966D1D0F
+
     7BB22102B10FFFFF0FF
+
     7BB23FFFFFFFFFF4C0F
+
     7BB240C09F5FFFF2894
-    7BB25FF01FFAAAAAAAA
+
+    7BB25FF01FFAAAAAAAA'
