--- a/tests/test_cases/2022/commands/7C6.7CE.22B002|fc=1.yaml
+++ b/tests/test_cases/2022/commands/7C6.7CE.22B002|fc=1.yaml
@@ -1,112 +1,102 @@
 command_id: 7C6.7CE.22B002|fc=1
 test_cases:
 - expected_values:
-    KIA_CLUSTER_VOLTAGE: 13.82812
-    KIA_FLI_VOL: 7
-    KIA_FLI_VOL_THIRDGEN: 3.5
-    KIA_ODO_KM: 0
-    KIA_ODO_MI: 26011
-    KIA_VPWR: 13.82812
-  response: |-
-    7CE100F62B002D00000
+    STINGER_FLI_VOL: 7
+    STINGER_CLUSTER_VOLTAGE: 13.82812
+    STINGER_ODO_KM: 0
+    STINGER_ODO_MI: 26011
+  response: '7CE100F62B002D00000
+
     7CE210007B100000000
-    7CE22659B0000000000
+
+    7CE22659B0000000000'
 - expected_values:
-    KIA_CLUSTER_VOLTAGE: 13.75
-    KIA_FLI_VOL: 9
-    KIA_FLI_VOL_THIRDGEN: 4.5
-    KIA_ODO_KM: 0
-    KIA_ODO_MI: 26004
-    KIA_VPWR: 13.75
-  response: |-
-    7CE100F62B002D00000
+    STINGER_FLI_VOL: 9
+    STINGER_CLUSTER_VOLTAGE: 13.75
+    STINGER_ODO_KM: 0
+    STINGER_ODO_MI: 26004
+  response: '7CE100F62B002D00000
+
     7CE210009B000000000
-    7CE2265940000000000
+
+    7CE2265940000000000'
 - expected_values:
-    KIA_CLUSTER_VOLTAGE: 13.75
-    KIA_FLI_VOL: 15
-    KIA_FLI_VOL_THIRDGEN: 7.5
-    KIA_ODO_KM: 0
-    KIA_ODO_MI: 22905
-    KIA_VPWR: 13.75
-  response: |-
-    7CE100F62B002D00000
+    STINGER_FLI_VOL: 15
+    STINGER_CLUSTER_VOLTAGE: 13.75
+    STINGER_ODO_KM: 0
+    STINGER_ODO_MI: 22905
+  response: '7CE100F62B002D00000
+
     7CE21000FB000000000
-    7CE2259790000000000
+
+    7CE2259790000000000'
 - expected_values:
-    KIA_CLUSTER_VOLTAGE: 13.67188
-    KIA_FLI_VOL: 19
-    KIA_FLI_VOL_THIRDGEN: 9.5
-    KIA_ODO_KM: 0
-    KIA_ODO_MI: 22903
-    KIA_VPWR: 13.67188
-  response: |-
-    7CE100F62B002D00000
+    STINGER_FLI_VOL: 19
+    STINGER_CLUSTER_VOLTAGE: 13.67188
+    STINGER_ODO_KM: 0
+    STINGER_ODO_MI: 22903
+  response: '7CE100F62B002D00000
+
     7CE210013AF00000000
-    7CE2259770000000000
+
+    7CE2259770000000000'
 - expected_values:
-    KIA_CLUSTER_VOLTAGE: 13.82812
-    KIA_FLI_VOL: 50
-    KIA_FLI_VOL_THIRDGEN: 25
-    KIA_ODO_KM: 0
-    KIA_ODO_MI: 22527
-    KIA_VPWR: 13.82812
-  response: |-
-    7CE100F62B002D00000
+    STINGER_FLI_VOL: 50
+    STINGER_CLUSTER_VOLTAGE: 13.82812
+    STINGER_ODO_KM: 0
+    STINGER_ODO_MI: 22527
+  response: '7CE100F62B002D00000
+
     7CE210032B100000000
-    7CE2257FF0000000000
+
+    7CE2257FF0000000000'
 - expected_values:
-    KIA_CLUSTER_VOLTAGE: 13.82812
-    KIA_FLI_VOL: 50
-    KIA_FLI_VOL_THIRDGEN: 25
-    KIA_ODO_KM: 0
-    KIA_ODO_MI: 22784
-    KIA_VPWR: 13.82812
-  response: |-
-    7CE100F62B002D00000
+    STINGER_FLI_VOL: 50
+    STINGER_CLUSTER_VOLTAGE: 13.82812
+    STINGER_ODO_KM: 0
+    STINGER_ODO_MI: 22784
+  response: '7CE100F62B002D00000
+
     7CE210032B100000000
-    7CE2259000000000000
+
+    7CE2259000000000000'
 - expected_values:
-    KIA_CLUSTER_VOLTAGE: 14.0625
-    KIA_FLI_VOL: 61
-    KIA_FLI_VOL_THIRDGEN: 30.5
-    KIA_ODO_KM: 0
-    KIA_ODO_MI: 62432
-    KIA_VPWR: 14.0625
-  response: |-
-    7CE100F62B002D00000
+    STINGER_FLI_VOL: 61
+    STINGER_CLUSTER_VOLTAGE: 14.0625
+    STINGER_ODO_KM: 0
+    STINGER_ODO_MI: 62432
+  response: '7CE100F62B002D00000
+
     7CE21003DB400000000
-    7CE22F3E00000000000
+
+    7CE22F3E00000000000'
 - expected_values:
-    KIA_CLUSTER_VOLTAGE: 13.75
-    KIA_FLI_VOL: 110
-    KIA_FLI_VOL_THIRDGEN: 55
-    KIA_ODO_KM: 0
-    KIA_ODO_MI: 21666
-    KIA_VPWR: 13.75
-  response: |-
-    7CE100F62B002D00000
+    STINGER_FLI_VOL: 110
+    STINGER_CLUSTER_VOLTAGE: 13.75
+    STINGER_ODO_KM: 0
+    STINGER_ODO_MI: 21666
+  response: '7CE100F62B002D00000
+
     7CE21006EB000000000
-    7CE2254A20000000000
+
+    7CE2254A20000000000'
 - expected_values:
-    KIA_CLUSTER_VOLTAGE: 11.17188
-    KIA_FLI_VOL: 112
-    KIA_FLI_VOL_THIRDGEN: 56
-    KIA_ODO_KM: 0
-    KIA_ODO_MI: 23152
-    KIA_VPWR: 11.17188
-  response: |-
-    7CE100F62B002D00000
+    STINGER_FLI_VOL: 112
+    STINGER_CLUSTER_VOLTAGE: 11.17188
+    STINGER_ODO_KM: 0
+    STINGER_ODO_MI: 23152
+  response: '7CE100F62B002D00000
+
     7CE2100708F00000000
-    7CE225A700000000000
+
+    7CE225A700000000000'
 - expected_values:
-    KIA_CLUSTER_VOLTAGE: 11.79688
-    KIA_FLI_VOL: 255
-    KIA_FLI_VOL_THIRDGEN: 127.5
-    KIA_ODO_KM: 0
-    KIA_ODO_MI: 23052
-    KIA_VPWR: 11.79688
-  response: |-
-    7CE100F62B002D00000
+    STINGER_FLI_VOL: 255
+    STINGER_CLUSTER_VOLTAGE: 11.79688
+    STINGER_ODO_KM: 0
+    STINGER_ODO_MI: 23052
+  response: '7CE100F62B002D00000
+
     7CE2100FF9700000000
-    7CE225A0C0000000000
+
+    7CE225A0C0000000000'
