--- a/tests/test_cases/2023/commands/770.778.22BC05.yaml
+++ b/tests/test_cases/2023/commands/770.778.22BC05.yaml
@@ -1,42 +1,42 @@
 command_id: 770.778.22BC05
 test_cases:
 - expected_values:
-    KIA_HAZARD_SW: 0
-  response: |-
-    778100B62BC050F1724
-    778210000200000AAAA
+    STINGER_HAZARD_SW: 0
+  response: '778100B62BC050F1724
+
+    778210000200000AAAA'
 - expected_values:
-    KIA_HAZARD_SW: 0
-  response: |-
-    778100B62BC050F1724
-    778210000280000AAAA
+    STINGER_HAZARD_SW: 0
+  response: '778100B62BC050F1724
+
+    778210000280000AAAA'
 - expected_values:
-    KIA_HAZARD_SW: 0
-  response: |-
-    778100B62BC050F1724
-    778210000600000AAAA
+    STINGER_HAZARD_SW: 0
+  response: '778100B62BC050F1724
+
+    778210000600000AAAA'
 - expected_values:
-    KIA_HAZARD_SW: 80
-  response: |-
-    778100B62BC050F1724
-    778210050200000AAAA
+    STINGER_HAZARD_SW: 80
+  response: '778100B62BC050F1724
+
+    778210050200000AAAA'
 - expected_values:
-    KIA_HAZARD_SW: 80
-  response: |-
-    778100B62BC050F1724
-    778210050600000AAAA
+    STINGER_HAZARD_SW: 80
+  response: '778100B62BC050F1724
+
+    778210050600000AAAA'
 - expected_values:
-    KIA_HAZARD_SW: 160
-  response: |-
-    778100B62BC050F1724
-    7782100A0200000AAAA
+    STINGER_HAZARD_SW: 160
+  response: '778100B62BC050F1724
+
+    7782100A0200000AAAA'
 - expected_values:
-    KIA_HAZARD_SW: 160
-  response: |-
-    778100B62BC050F1724
-    7782100A0600000AAAA
+    STINGER_HAZARD_SW: 160
+  response: '778100B62BC050F1724
+
+    7782100A0600000AAAA'
 - expected_values:
-    KIA_HAZARD_SW: 240
-  response: |-
-    778100B62BC050F1724
-    7782100F0600000AAAA
+    STINGER_HAZARD_SW: 240
+  response: '778100B62BC050F1724
+
+    7782100F0600000AAAA'
