--- a/tests/test_cases/2023/commands/7B3.7BB.220100|fc=1.yaml
+++ b/tests/test_cases/2023/commands/7B3.7BB.220100|fc=1.yaml
@@ -1,461 +1,407 @@
 command_id: 7B3.7BB.220100|fc=1
 test_cases:
 - expected_values:
-    KIA_HVAC_AAT: -17
-    KIA_HVAC_EVAPORATOR_T: -12
-    KIA_HVAC_HUMIDITY_SENSOR_FOR_AUTOMATIC_DEFOGGER: 23
-    KIA_HVAC_IAT: -15.5
-    KIA_HVAC_IAT_DRIVER_LEGS_VENT: 87.5
-    KIA_HVAC_IAT_DRIVER_VENT: 87.5
-    KIA_TEMP_EXT: -17
-    KIA_TEMP_INT: -15.5
-    KIA_VSS: 0
-  response: |-
-    7BB10256201007F901E
+    STINGER_TEMP_INT: -15.5
+    STINGER_TEMP_EXT: -17
+    STINGER_VSS: 0
+  response: '7BB10256201007F901E
+
     7BB2168FF312E3807EF
+
     7BB22C507EFFFFF0EFF
+
     7BB23FFFFFFFFFFEFDB
+
     7BB24F017B8FFFF0072
-    7BB25FF00FFAAAAAAAA
+
+    7BB25FF00FFAAAAAAAA'
 - expected_values:
-    KIA_HVAC_AAT: -16.5
-    KIA_HVAC_EVAPORATOR_T: -14
-    KIA_HVAC_HUMIDITY_SENSOR_FOR_AUTOMATIC_DEFOGGER: 67
-    KIA_HVAC_IAT: -14
-    KIA_HVAC_IAT_DRIVER_LEGS_VENT: 87.5
-    KIA_HVAC_IAT_DRIVER_VENT: 87.5
-    KIA_TEMP_EXT: -16.5
-    KIA_TEMP_INT: -14
-    KIA_VSS: 42
-  response: |-
-    7BB10256201007F901E
+    STINGER_TEMP_INT: -14
+    STINGER_TEMP_EXT: -16.5
+    STINGER_VSS: 42
+  response: '7BB10256201007F901E
+
     7BB2168FF342F3400EF
+
     7BB22B500EFFFFF11FF
+
     7BB23FFFFFFFFFFEFDB
+
     7BB24F043BEFFFF2A76
-    7BB25FF00FFAAAAAAAA
+
+    7BB25FF00FFAAAAAAAA'
 - expected_values:
-    KIA_HVAC_AAT: -14
-    KIA_HVAC_EVAPORATOR_T: -12.5
-    KIA_HVAC_HUMIDITY_SENSOR_FOR_AUTOMATIC_DEFOGGER: 51
-    KIA_HVAC_IAT: -6.5
-    KIA_HVAC_IAT_DRIVER_LEGS_VENT: 87.5
-    KIA_HVAC_IAT_DRIVER_VENT: 87.5
-    KIA_TEMP_EXT: -14
-    KIA_TEMP_INT: -6.5
-    KIA_VSS: 0
-  response: |-
-    7BB10256201007F901E
+    STINGER_TEMP_INT: -6.5
+    STINGER_TEMP_EXT: -14
+    STINGER_VSS: 0
+  response: '7BB10256201007F901E
+
     7BB2168FF43343716EF
+
     7BB22EF09EFFFFF0FFF
+
     7BB23FFFFFFFFFFEF10
+
     7BB24F0332BFFFF0079
-    7BB25FF00FFAAAAAAAA
+
+    7BB25FF00FFAAAAAAAA'
 - expected_values:
-    KIA_HVAC_AAT: -14.5
-    KIA_HVAC_EVAPORATOR_T: -12
-    KIA_HVAC_HUMIDITY_SENSOR_FOR_AUTOMATIC_DEFOGGER: 50
-    KIA_HVAC_IAT: -5
-    KIA_HVAC_IAT_DRIVER_LEGS_VENT: 87.5
-    KIA_HVAC_IAT_DRIVER_VENT: 87.5
-    KIA_TEMP_EXT: -14.5
-    KIA_TEMP_INT: -5
-    KIA_VSS: 55
-  response: |-
-    7BB10256201007F901E
+    STINGER_TEMP_INT: -5
+    STINGER_TEMP_EXT: -14.5
+    STINGER_VSS: 55
+  response: '7BB10256201007F901E
+
     7BB2168FF46333812EF
+
     7BB22EF0AEFFFFF0FFF
+
     7BB23FFFFFFFFFFEF0F
+
     7BB24F0322BFFFF377C
-    7BB25FF00FFAAAAAAAA
+
+    7BB25FF00FFAAAAAAAA'
 - expected_values:
-    KIA_HVAC_AAT: -17
-    KIA_HVAC_EVAPORATOR_T: -13.5
-    KIA_HVAC_HUMIDITY_SENSOR_FOR_AUTOMATIC_DEFOGGER: 71
-    KIA_HVAC_IAT: 0
-    KIA_HVAC_IAT_DRIVER_LEGS_VENT: 87.5
-    KIA_HVAC_IAT_DRIVER_VENT: 87.5
-    KIA_TEMP_EXT: -17
-    KIA_TEMP_INT: 0
-    KIA_VSS: 60
-  response: |-
-    7BB10256201007F901E
+    STINGER_TEMP_INT: 0
+    STINGER_TEMP_EXT: -17
+    STINGER_VSS: 60
+  response: '7BB10256201007F901E
+
     7BB2168FF502E3500EF
+
     7BB229700EFFFFF11FF
+
     7BB23FFFFFFFFFFEFDB
+
     7BB24F047C8FFFF3C8A
-    7BB25FF00FFAAAAAAAA
+
+    7BB25FF00FFAAAAAAAA'
 - expected_values:
-    KIA_HVAC_AAT: -20
-    KIA_HVAC_EVAPORATOR_T: -8
-    KIA_HVAC_HUMIDITY_SENSOR_FOR_AUTOMATIC_DEFOGGER: 59
-    KIA_HVAC_IAT: 3.5
-    KIA_HVAC_IAT_DRIVER_LEGS_VENT: 87.5
-    KIA_HVAC_IAT_DRIVER_VENT: 87.5
-    KIA_TEMP_EXT: -20
-    KIA_TEMP_INT: 3.5
-    KIA_VSS: 0
-  response: |-
-    7BB10256201007F901E
+    STINGER_TEMP_INT: 3.5
+    STINGER_TEMP_EXT: -20
+    STINGER_VSS: 0
+  response: '7BB10256201007F901E
+
     7BB2168FF57284000EF
+
     7BB229700EFFFFF0EFF
+
     7BB23FFFFFFFFFFEFDB
+
     7BB24F03BCAFFFF0084
-    7BB25FF00FFAAAAAAAA
+
+    7BB25FF00FFAAAAAAAA'
 - expected_values:
-    KIA_HVAC_AAT: 3
-    KIA_HVAC_EVAPORATOR_T: 0.5
-    KIA_HVAC_HUMIDITY_SENSOR_FOR_AUTOMATIC_DEFOGGER: 81
-    KIA_HVAC_IAT: 6
-    KIA_HVAC_IAT_DRIVER_LEGS_VENT: 87.5
-    KIA_HVAC_IAT_DRIVER_VENT: 87.5
-    KIA_TEMP_EXT: 3
-    KIA_TEMP_INT: 6
-    KIA_VSS: 0
-  response: |-
-    7BB10256201007F901E
+    STINGER_TEMP_INT: 6
+    STINGER_TEMP_EXT: 3
+    STINGER_VSS: 0
+  response: '7BB10256201007F901E
+
     7BB2168FF5C565100EF
+
     7BB22A600EFFFFF11FF
+
     7BB23FFFFFFFFFFEFDB
+
     7BB24F051C4FFFF0079
-    7BB25FF01FFAAAAAAAA
+
+    7BB25FF01FFAAAAAAAA'
 - expected_values:
-    KIA_HVAC_AAT: 2.5
-    KIA_HVAC_EVAPORATOR_T: 9
-    KIA_HVAC_HUMIDITY_SENSOR_FOR_AUTOMATIC_DEFOGGER: 41
-    KIA_HVAC_IAT: 14.5
-    KIA_HVAC_IAT_DRIVER_LEGS_VENT: 87.5
-    KIA_HVAC_IAT_DRIVER_VENT: 87.5
-    KIA_TEMP_EXT: 2.5
-    KIA_TEMP_INT: 14.5
-    KIA_VSS: 0
-  response: |-
-    7BB10256201007F901E
+    STINGER_TEMP_INT: 14.5
+    STINGER_TEMP_EXT: 2.5
+    STINGER_VSS: 0
+  response: '7BB10256201007F901E
+
     7BB2168FF6D55620AEF
+
     7BB22EF0CEFFFFF10FF
+
     7BB23FFFFFFFFFFEF10
+
     7BB24F0292CFFFF0056
-    7BB25FF01FFAAAAAAAA
+
+    7BB25FF01FFAAAAAAAA'
 - expected_values:
-    KIA_HVAC_AAT: -16
-    KIA_HVAC_EVAPORATOR_T: -4.5
-    KIA_HVAC_HUMIDITY_SENSOR_FOR_AUTOMATIC_DEFOGGER: 29
-    KIA_HVAC_IAT: 17
-    KIA_HVAC_IAT_DRIVER_LEGS_VENT: 87.5
-    KIA_HVAC_IAT_DRIVER_VENT: 87.5
-    KIA_TEMP_EXT: -16
-    KIA_TEMP_INT: 17
-    KIA_VSS: 55
-  response: |-
-    7BB10256201007F901E
+    STINGER_TEMP_INT: 17
+    STINGER_TEMP_EXT: -16
+    STINGER_VSS: 55
+  response: '7BB10256201007F901E
+
     7BB2168FF72304714EF
+
     7BB229709EFFFFF0EFF
+
     7BB23FFFFFFFFFFEFDD
+
     7BB24F01DCBFFFF3796
-    7BB25FF00FFAAAAAAAA
+
+    7BB25FF00FFAAAAAAAA'
 - expected_values:
-    KIA_HVAC_AAT: -2.5
-    KIA_HVAC_EVAPORATOR_T: 1.5
-    KIA_HVAC_HUMIDITY_SENSOR_FOR_AUTOMATIC_DEFOGGER: 85
-    KIA_HVAC_IAT: 17
-    KIA_HVAC_IAT_DRIVER_LEGS_VENT: 87.5
-    KIA_HVAC_IAT_DRIVER_VENT: 87.5
-    KIA_TEMP_EXT: -2.5
-    KIA_TEMP_INT: 17
-    KIA_VSS: 0
-  response: |-
-    7BB10256201007F901E
+    STINGER_TEMP_INT: 17
+    STINGER_TEMP_EXT: -2.5
+    STINGER_VSS: 0
+  response: '7BB10256201007F901E
+
     7BB2168FF724B5300E2
+
     7BB229800E1FFFF11FF
+
     7BB23FFFFFFFFFFEFDC
+
     7BB24F0557AFFFF0094
-    7BB25FF01FFAAAAAAAA
+
+    7BB25FF01FFAAAAAAAA'
 - expected_values:
-    KIA_HVAC_AAT: 16.5
-    KIA_HVAC_EVAPORATOR_T: 2.5
-    KIA_HVAC_HUMIDITY_SENSOR_FOR_AUTOMATIC_DEFOGGER: 46
-    KIA_HVAC_IAT: 18.5
-    KIA_HVAC_IAT_DRIVER_LEGS_VENT: 87.5
-    KIA_HVAC_IAT_DRIVER_VENT: 87.5
-    KIA_TEMP_EXT: 16.5
-    KIA_TEMP_INT: 18.5
-    KIA_VSS: 71
-  response: |-
-    7BB10256201007F901E
+    STINGER_TEMP_INT: 18.5
+    STINGER_TEMP_EXT: 16.5
+    STINGER_VSS: 71
+  response: '7BB10256201007F901E
+
     7BB2168FF757155296C
+
     7BB226B2C68FFFF0EFF
+
     7BB23FFFFFFFFFF4D0E
+
     7BB240E2EC7FFFF47A4
-    7BB25FF01FFAAAAAAAA
+
+    7BB25FF01FFAAAAAAAA'
 - expected_values:
-    KIA_HVAC_AAT: 17
-    KIA_HVAC_EVAPORATOR_T: 3.5
-    KIA_HVAC_HUMIDITY_SENSOR_FOR_AUTOMATIC_DEFOGGER: 38
-    KIA_HVAC_IAT: 19.5
-    KIA_HVAC_IAT_DRIVER_LEGS_VENT: 87.5
-    KIA_HVAC_IAT_DRIVER_VENT: 87.5
-    KIA_TEMP_EXT: 17
-    KIA_TEMP_INT: 19.5
-    KIA_VSS: 45
-  response: |-
-    7BB10256201007F901E
+    STINGER_TEMP_INT: 19.5
+    STINGER_TEMP_EXT: 17
+    STINGER_VSS: 45
+  response: '7BB10256201007F901E
+
     7BB2168FF777257066B
+
     7BB226A066BFFFFF1FF
+
     7BB23FFFFFFFFFF4D0E
+
     7BB240E26C6FFFF2DA9
-    7BB25FF01FFAAAAAAAA
+
+    7BB25FF01FFAAAAAAAA'
 - expected_values:
-    KIA_HVAC_AAT: 23
-    KIA_HVAC_EVAPORATOR_T: 2.5
-    KIA_HVAC_HUMIDITY_SENSOR_FOR_AUTOMATIC_DEFOGGER: 46
-    KIA_HVAC_IAT: 19.5
-    KIA_HVAC_IAT_DRIVER_LEGS_VENT: 87.5
-    KIA_HVAC_IAT_DRIVER_VENT: 87.5
-    KIA_TEMP_EXT: 23
-    KIA_TEMP_INT: 19.5
-    KIA_VSS: 28
-  response: |-
-    7BB10256201007F901E
+    STINGER_TEMP_INT: 19.5
+    STINGER_TEMP_EXT: 23
+    STINGER_VSS: 28
+  response: '7BB10256201007F901E
+
     7BB2168FF777E550963
+
     7BB226A0A64FFFF10FF
+
     7BB23FFFFFFFFFF944D
+
     7BB24572EF2FFFF1C8D
-    7BB25FF01FFAAAAAAAA
+
+    7BB25FF01FFAAAAAAAA'
 - expected_values:
-    KIA_HVAC_AAT: -6.5
-    KIA_HVAC_EVAPORATOR_T: 8.5
-    KIA_HVAC_HUMIDITY_SENSOR_FOR_AUTOMATIC_DEFOGGER: 40
-    KIA_HVAC_IAT: 20
-    KIA_HVAC_IAT_DRIVER_LEGS_VENT: 87.5
-    KIA_HVAC_IAT_DRIVER_VENT: 87.5
-    KIA_TEMP_EXT: -6.5
-    KIA_TEMP_INT: 20
-    KIA_VSS: 21
-  response: |-
-    7BB10256201007F901E
+    STINGER_TEMP_INT: 20
+    STINGER_TEMP_EXT: -6.5
+    STINGER_VSS: 21
+  response: '7BB10256201007F901E
+
     7BB2168FF7843610BE0
+
     7BB229814DDFFFF0FFF
+
     7BB23FFFFFFFFFFEFDC
+
     7BB24F028C7FFFF158A
-    7BB25FF00FFAAAAAAAA
+
+    7BB25FF00FFAAAAAAAA'
 - expected_values:
-    KIA_HVAC_AAT: -1
-    KIA_HVAC_EVAPORATOR_T: 15
-    KIA_HVAC_HUMIDITY_SENSOR_FOR_AUTOMATIC_DEFOGGER: 32
-    KIA_HVAC_IAT: 20
-    KIA_HVAC_IAT_DRIVER_LEGS_VENT: 87.5
-    KIA_HVAC_IAT_DRIVER_VENT: 87.5
-    KIA_TEMP_EXT: -1
-    KIA_TEMP_INT: 20
-    KIA_VSS: 0
-  response: |-
-    7BB10256201007F901E
+    STINGER_TEMP_INT: 20
+    STINGER_TEMP_EXT: -1
+    STINGER_VSS: 0
+  response: '7BB10256201007F901E
+
     7BB2168FF784E6E0FEF
+
     7BB229720EFFFFF0FFF
+
     7BB23FFFFFFFFFFEFDC
+
     7BB24F020C8FFFF006C
-    7BB25FF01FFAAAAAAAA
+
+    7BB25FF01FFAAAAAAAA'
 - expected_values:
-    KIA_HVAC_AAT: -6
-    KIA_HVAC_EVAPORATOR_T: 5
-    KIA_HVAC_HUMIDITY_SENSOR_FOR_AUTOMATIC_DEFOGGER: 41
-    KIA_HVAC_IAT: 25.5
-    KIA_HVAC_IAT_DRIVER_LEGS_VENT: 87.5
-    KIA_HVAC_IAT_DRIVER_VENT: 87.5
-    KIA_TEMP_EXT: -6
-    KIA_TEMP_INT: 25.5
-    KIA_VSS: 81
-  response: |-
-    7BB10256201007F901E
+    STINGER_TEMP_INT: 25.5
+    STINGER_TEMP_EXT: -6
+    STINGER_VSS: 81
+  response: '7BB10256201007F901E
+
     7BB2168FF83445A1387
+
     7BB22A40F88FFFF0FFF
+
     7BB23FFFFFFFFFFEFDC
+
     7BB24F029C4FFFF51B8
-    7BB25FF00FFAAAAAAAA
+
+    7BB25FF00FFAAAAAAAA'
 - expected_values:
-    KIA_HVAC_AAT: 16.5
-    KIA_HVAC_EVAPORATOR_T: 5.5
-    KIA_HVAC_HUMIDITY_SENSOR_FOR_AUTOMATIC_DEFOGGER: 14
-    KIA_HVAC_IAT: 25.5
-    KIA_HVAC_IAT_DRIVER_LEGS_VENT: 87.5
-    KIA_HVAC_IAT_DRIVER_VENT: 87.5
-    KIA_TEMP_EXT: 16.5
-    KIA_TEMP_INT: 25.5
-    KIA_VSS: 0
-  response: |-
-    7BB10256201007F901E
+    STINGER_TEMP_INT: 25.5
+    STINGER_TEMP_EXT: 16.5
+    STINGER_VSS: 0
+  response: '7BB10256201007F901E
+
     7BB2168FF83715B4244
+
     7BB223E2E43FFFFEFFF
+
     7BB23FFFFFFFFFFE0D1
+
     7BB24A60EF1FFFF00B0
-    7BB25FF01FFAAAAAAAA
+
+    7BB25FF01FFAAAAAAAA'
 - expected_values:
-    KIA_HVAC_AAT: 23.5
-    KIA_HVAC_EVAPORATOR_T: 3
-    KIA_HVAC_HUMIDITY_SENSOR_FOR_AUTOMATIC_DEFOGGER: 14
-    KIA_HVAC_IAT: 27.5
-    KIA_HVAC_IAT_DRIVER_LEGS_VENT: 87.5
-    KIA_HVAC_IAT_DRIVER_VENT: 87.5
-    KIA_TEMP_EXT: 23.5
-    KIA_TEMP_INT: 27.5
-    KIA_VSS: 61
-  response: |-
-    7BB10256201007F901E
+    STINGER_TEMP_INT: 27.5
+    STINGER_TEMP_EXT: 23.5
+    STINGER_VSS: 61
+  response: '7BB10256201007F901E
+
     7BB2168FF877F563821
+
     7BB22102F26FFFF79FF
+
     7BB23FFFFFFFFFF4D0F
+
     7BB240E0EEFFFFF3DB0
-    7BB25FF01FFAAAAAAAA
+
+    7BB25FF01FFAAAAAAAA'
 - expected_values:
-    KIA_HVAC_AAT: 25
-    KIA_HVAC_EVAPORATOR_T: 6.5
-    KIA_HVAC_HUMIDITY_SENSOR_FOR_AUTOMATIC_DEFOGGER: 30
-    KIA_HVAC_IAT: 27.5
-    KIA_HVAC_IAT_DRIVER_LEGS_VENT: 87.5
-    KIA_HVAC_IAT_DRIVER_VENT: 87.5
-    KIA_TEMP_EXT: 25
-    KIA_TEMP_INT: 27.5
-    KIA_VSS: 0
-  response: |-
-    7BB10256201007F901E
+    STINGER_TEMP_INT: 27.5
+    STINGER_TEMP_EXT: 25
+    STINGER_VSS: 0
+  response: '7BB10256201007F901E
+
     7BB2168FF87825D040F
+
     7BB223E0610FFFF3DFF
+
     7BB23FFFFFFFFFF4D0F
+
     7BB240E1EEFFFFF00AE
-    7BB25FF00FFAAAAAAAA
+
+    7BB25FF00FFAAAAAAAA'
 - expected_values:
-    KIA_HVAC_AAT: 29
-    KIA_HVAC_EVAPORATOR_T: 5.5
-    KIA_HVAC_HUMIDITY_SENSOR_FOR_AUTOMATIC_DEFOGGER: 9
-    KIA_HVAC_IAT: 28
-    KIA_HVAC_IAT_DRIVER_LEGS_VENT: 87.5
-    KIA_HVAC_IAT_DRIVER_VENT: 87.5
-    KIA_TEMP_EXT: 29
-    KIA_TEMP_INT: 28
-    KIA_VSS: 0
-  response: |-
-    7BB10256201007F901E
+    STINGER_TEMP_INT: 28
+    STINGER_TEMP_EXT: 29
+    STINGER_VSS: 0
+  response: '7BB10256201007F901E
+
     7BB2168FF888A5B4322
+
     7BB22104920FFFFA7FF
+
     7BB23FFFFFFFFFF4E0F
+
     7BB240E09F0FFFF00B1
-    7BB25FF01FFAAAAAAAA
+
+    7BB25FF01FFAAAAAAAA'
 - expected_values:
-    KIA_HVAC_AAT: 25
-    KIA_HVAC_EVAPORATOR_T: 19.5
-    KIA_HVAC_HUMIDITY_SENSOR_FOR_AUTOMATIC_DEFOGGER: 51
-    KIA_HVAC_IAT: 28.5
-    KIA_HVAC_IAT_DRIVER_LEGS_VENT: 87.5
-    KIA_HVAC_IAT_DRIVER_VENT: 87.5
-    KIA_TEMP_EXT: 25
-    KIA_TEMP_INT: 28.5
-    KIA_VSS: 60
-  response: |-
-    7BB10256201007F901E
+    STINGER_TEMP_INT: 28.5
+    STINGER_TEMP_EXT: 25
+    STINGER_VSS: 60
+  response: '7BB10256201007F901E
+
     7BB2168FF898277001E
+
     7BB223D001DFFFF10FF
+
     7BB23FFFFFFFFFF4E0F
+
     7BB240E33F0FFFF3CB1
-    7BB25FF00FFAAAAAAAA
+
+    7BB25FF00FFAAAAAAAA'
 - expected_values:
-    KIA_HVAC_AAT: 18.5
-    KIA_HVAC_EVAPORATOR_T: 4
-    KIA_HVAC_HUMIDITY_SENSOR_FOR_AUTOMATIC_DEFOGGER: 36
-    KIA_HVAC_IAT: 29
-    KIA_HVAC_IAT_DRIVER_LEGS_VENT: 87.5
-    KIA_HVAC_IAT_DRIVER_VENT: 87.5
-    KIA_TEMP_EXT: 18.5
-    KIA_TEMP_INT: 29
-    KIA_VSS: 149
-  response: |-
-    7BB10256201007F901E
+    STINGER_TEMP_INT: 29
+    STINGER_TEMP_EXT: 18.5
+    STINGER_VSS: 149
+  response: '7BB10256201007F901E
+
     7BB2168FF8A75580053
+
     7BB223D0054FFFF0EFF
+
     7BB23FFFFFFFFFFA382
+
     7BB246324F0FFFF95B4
-    7BB25FF01FFAAAAAAAA
+
+    7BB25FF01FFAAAAAAAA'
 - expected_values:
-    KIA_HVAC_AAT: 21.5
-    KIA_HVAC_EVAPORATOR_T: 5
-    KIA_HVAC_HUMIDITY_SENSOR_FOR_AUTOMATIC_DEFOGGER: 11
-    KIA_HVAC_IAT: 31
-    KIA_HVAC_IAT_DRIVER_LEGS_VENT: 87.5
-    KIA_HVAC_IAT_DRIVER_VENT: 87.5
-    KIA_TEMP_EXT: 21.5
-    KIA_TEMP_INT: 31
-    KIA_VSS: 67
-  response: |-
-    7BB10256201007F901E
+    STINGER_TEMP_INT: 31
+    STINGER_TEMP_EXT: 21.5
+    STINGER_VSS: 67
+  response: '7BB10256201007F901E
+
     7BB2168FF8E7B5A4A3F
+
     7BB223D533DFFFF10FF
+
     7BB23FFFFFFFFFF4D0F
+
     7BB240E0BF0FFFF43B2
-    7BB25FF01FFAAAAAAAA
+
+    7BB25FF01FFAAAAAAAA'
 - expected_values:
-    KIA_HVAC_AAT: 34
-    KIA_HVAC_EVAPORATOR_T: 8
-    KIA_HVAC_HUMIDITY_SENSOR_FOR_AUTOMATIC_DEFOGGER: 27
-    KIA_HVAC_IAT: 31.5
-    KIA_HVAC_IAT_DRIVER_LEGS_VENT: 87.5
-    KIA_HVAC_IAT_DRIVER_VENT: 87.5
-    KIA_TEMP_EXT: 34
-    KIA_TEMP_INT: 31.5
-    KIA_VSS: 0
-  response: |-
-    7BB10256201007F901E
+    STINGER_TEMP_INT: 31.5
+    STINGER_TEMP_EXT: 34
+    STINGER_VSS: 0
+  response: '7BB10256201007F901E
+
     7BB2168FF8F94600F1A
+
     7BB22100E1BFFFFF0FF
+
     7BB23FFFFFFFFFF9442
+
     7BB24571BF2FFFF00AE
-    7BB25FF01FFAAAAAAAA
+
+    7BB25FF01FFAAAAAAAA'
 - expected_values:
-    KIA_HVAC_AAT: 22
-    KIA_HVAC_EVAPORATOR_T: 3.5
-    KIA_HVAC_HUMIDITY_SENSOR_FOR_AUTOMATIC_DEFOGGER: 10
-    KIA_HVAC_IAT: 32
-    KIA_HVAC_IAT_DRIVER_LEGS_VENT: 87.5
-    KIA_HVAC_IAT_DRIVER_VENT: 87.5
-    KIA_TEMP_EXT: 22
-    KIA_TEMP_INT: 32
-    KIA_VSS: 12
-  response: |-
-    7BB10256201007F901E
+    STINGER_TEMP_INT: 32
+    STINGER_TEMP_EXT: 22
+    STINGER_VSS: 12
+  response: '7BB10256201007F901E
+
     7BB2168FF907C573E39
+
     7BB223D293DFFFF10FF
+
     7BB23FFFFFFFFFF4D0F
+
     7BB240E0AF0FFFF0CAE
-    7BB25FF01FFAAAAAAAA
+
+    7BB25FF01FFAAAAAAAA'
 - expected_values:
-    KIA_HVAC_AAT: 23.5
-    KIA_HVAC_EVAPORATOR_T: 26
-    KIA_HVAC_HUMIDITY_SENSOR_FOR_AUTOMATIC_DEFOGGER: 26
-    KIA_HVAC_IAT: 34
-    KIA_HVAC_IAT_DRIVER_LEGS_VENT: 87.5
-    KIA_HVAC_IAT_DRIVER_VENT: 87.5
-    KIA_TEMP_EXT: 23.5
-    KIA_TEMP_INT: 34
-    KIA_VSS: 62
-  response: |-
-    7BB10256201007F901E
+    STINGER_TEMP_INT: 34
+    STINGER_TEMP_EXT: 23.5
+    STINGER_VSS: 62
+  response: '7BB10256201007F901E
+
     7BB2168FF947F840C11
+
     7BB223D0E10FFFF11FF
+
     7BB23FFFFFFFFFFA480
+
     7BB24631AF2FFFF3EB1
-    7BB25FF00FFAAAAAAAA
+
+    7BB25FF00FFAAAAAAAA'
 - expected_values:
-    KIA_HVAC_AAT: 27.5
-    KIA_HVAC_EVAPORATOR_T: 7.5
-    KIA_HVAC_HUMIDITY_SENSOR_FOR_AUTOMATIC_DEFOGGER: 11
-    KIA_HVAC_IAT: 37
-    KIA_HVAC_IAT_DRIVER_LEGS_VENT: 87.5
-    KIA_HVAC_IAT_DRIVER_VENT: 87.5
-    KIA_TEMP_EXT: 27.5
-    KIA_TEMP_INT: 37
-    KIA_VSS: 39
-  response: |-
-    7BB10256201007F901E
+    STINGER_TEMP_INT: 37
+    STINGER_TEMP_EXT: 27.5
+    STINGER_VSS: 39
+  response: '7BB10256201007F901E
+
     7BB2168FF9A875F4A0F
+
     7BB22104610FFFF0EFF
+
     7BB23FFFFFFFFFF4D10
+
     7BB240E0BEFFFFF279A
-    7BB25FF01FFAAAAAAAA
+
+    7BB25FF01FFAAAAAAAA'
