--- a/tests/test_cases/2023/commands/7C6.7CE.22B002|fc=1.yaml
+++ b/tests/test_cases/2023/commands/7C6.7CE.22B002|fc=1.yaml
@@ -1,112 +1,102 @@
 command_id: 7C6.7CE.22B002|fc=1
 test_cases:
 - expected_values:
-    KIA_CLUSTER_VOLTAGE: 13.90625
-    KIA_FLI_VOL: 16
-    KIA_FLI_VOL_THIRDGEN: 8
-    KIA_ODO_KM: 0
-    KIA_ODO_MI: 54164
-    KIA_VPWR: 13.90625
-  response: |-
-    7CE100F62B002D00000
+    STINGER_FLI_VOL: 16
+    STINGER_CLUSTER_VOLTAGE: 13.90625
+    STINGER_ODO_KM: 0
+    STINGER_ODO_MI: 54164
+  response: '7CE100F62B002D00000
+
     7CE210010B200000000
-    7CE22D3940000000000
+
+    7CE22D3940000000000'
 - expected_values:
-    KIA_CLUSTER_VOLTAGE: 13.75
-    KIA_FLI_VOL: 18
-    KIA_FLI_VOL_THIRDGEN: 9
-    KIA_ODO_KM: 0
-    KIA_ODO_MI: 47007
-    KIA_VPWR: 13.75
-  response: |-
-    7CE100F62B002D00000
+    STINGER_FLI_VOL: 18
+    STINGER_CLUSTER_VOLTAGE: 13.75
+    STINGER_ODO_KM: 0
+    STINGER_ODO_MI: 47007
+  response: '7CE100F62B002D00000
+
     7CE210012B000000000
-    7CE22B79F0000000000
+
+    7CE22B79F0000000000'
 - expected_values:
-    KIA_CLUSTER_VOLTAGE: 13.67188
-    KIA_FLI_VOL: 20
-    KIA_FLI_VOL_THIRDGEN: 10
-    KIA_ODO_KM: 0
-    KIA_ODO_MI: 45524
-    KIA_VPWR: 13.67188
-  response: |-
-    7CE100F62B002D00000
+    STINGER_FLI_VOL: 20
+    STINGER_CLUSTER_VOLTAGE: 13.67188
+    STINGER_ODO_KM: 0
+    STINGER_ODO_MI: 45524
+  response: '7CE100F62B002D00000
+
     7CE210014AF00000000
-    7CE22B1D40000000000
+
+    7CE22B1D40000000000'
 - expected_values:
-    KIA_CLUSTER_VOLTAGE: 13.82812
-    KIA_FLI_VOL: 24
-    KIA_FLI_VOL_THIRDGEN: 12
-    KIA_ODO_KM: 0
-    KIA_ODO_MI: 41020
-    KIA_VPWR: 13.82812
-  response: |-
-    7CE100F62B002D00000
+    STINGER_FLI_VOL: 24
+    STINGER_CLUSTER_VOLTAGE: 13.82812
+    STINGER_ODO_KM: 0
+    STINGER_ODO_MI: 41020
+  response: '7CE100F62B002D00000
+
     7CE210018B100000000
-    7CE22A03C0000000000
+
+    7CE22A03C0000000000'
 - expected_values:
-    KIA_CLUSTER_VOLTAGE: 13.75
-    KIA_FLI_VOL: 31
-    KIA_FLI_VOL_THIRDGEN: 15.5
-    KIA_ODO_KM: 0
-    KIA_ODO_MI: 41020
-    KIA_VPWR: 13.75
-  response: |-
-    7CE100F62B002D00000
+    STINGER_FLI_VOL: 31
+    STINGER_CLUSTER_VOLTAGE: 13.75
+    STINGER_ODO_KM: 0
+    STINGER_ODO_MI: 41020
+  response: '7CE100F62B002D00000
+
     7CE21001FB000000000
-    7CE22A03C0000000000
+
+    7CE22A03C0000000000'
 - expected_values:
-    KIA_CLUSTER_VOLTAGE: 11.95312
-    KIA_FLI_VOL: 48
-    KIA_FLI_VOL_THIRDGEN: 24
-    KIA_ODO_KM: 0
-    KIA_ODO_MI: 42440
-    KIA_VPWR: 11.95312
-  response: |-
-    7CE100F62B002D00000
+    STINGER_FLI_VOL: 48
+    STINGER_CLUSTER_VOLTAGE: 11.95312
+    STINGER_ODO_KM: 0
+    STINGER_ODO_MI: 42440
+  response: '7CE100F62B002D00000
+
     7CE2100309900000000
-    7CE22A5C80000000000
+
+    7CE22A5C80000000000'
 - expected_values:
-    KIA_CLUSTER_VOLTAGE: 13.75
-    KIA_FLI_VOL: 71
-    KIA_FLI_VOL_THIRDGEN: 35.5
-    KIA_ODO_KM: 0
-    KIA_ODO_MI: 41215
-    KIA_VPWR: 13.75
-  response: |-
-    7CE100F62B002D00000
+    STINGER_FLI_VOL: 71
+    STINGER_CLUSTER_VOLTAGE: 13.75
+    STINGER_ODO_KM: 0
+    STINGER_ODO_MI: 41215
+  response: '7CE100F62B002D00000
+
     7CE210047B000000000
-    7CE22A0FF0000000000
+
+    7CE22A0FF0000000000'
 - expected_values:
-    KIA_CLUSTER_VOLTAGE: 13.75
-    KIA_FLI_VOL: 71
-    KIA_FLI_VOL_THIRDGEN: 35.5
-    KIA_ODO_KM: 0
-    KIA_ODO_MI: 41216
-    KIA_VPWR: 13.75
-  response: |-
-    7CE100F62B002D00000
+    STINGER_FLI_VOL: 71
+    STINGER_CLUSTER_VOLTAGE: 13.75
+    STINGER_ODO_KM: 0
+    STINGER_ODO_MI: 41216
+  response: '7CE100F62B002D00000
+
     7CE210047B000000000
-    7CE22A1000000000000
+
+    7CE22A1000000000000'
 - expected_values:
-    KIA_CLUSTER_VOLTAGE: 14.14062
-    KIA_FLI_VOL: 81
-    KIA_FLI_VOL_THIRDGEN: 40.5
-    KIA_ODO_KM: 0
-    KIA_ODO_MI: 55372
-    KIA_VPWR: 14.14062
-  response: |-
-    7CE100F62B002D00000
+    STINGER_FLI_VOL: 81
+    STINGER_CLUSTER_VOLTAGE: 14.14062
+    STINGER_ODO_KM: 0
+    STINGER_ODO_MI: 55372
+  response: '7CE100F62B002D00000
+
     7CE210051B500000000
-    7CE22D84C0000000000
+
+    7CE22D84C0000000000'
 - expected_values:
-    KIA_CLUSTER_VOLTAGE: 11.875
-    KIA_FLI_VOL: 255
-    KIA_FLI_VOL_THIRDGEN: 127.5
-    KIA_ODO_KM: 0
-    KIA_ODO_MI: 54320
-    KIA_VPWR: 11.875
-  response: |-
-    7CE100F62B002D00000
+    STINGER_FLI_VOL: 255
+    STINGER_CLUSTER_VOLTAGE: 11.875
+    STINGER_ODO_KM: 0
+    STINGER_ODO_MI: 54320
+  response: '7CE100F62B002D00000
+
     7CE2100FF9800000000
-    7CE22D4300000000000
+
+    7CE22D4300000000000'
